数据类型 差Object其他的基本记录完成

--- a/javascript/基本概念.md
+++ b/javascript/基本概念.md
@@ -7,26 +7,26 @@
   - ²ÉÓÃÍÕ·å´óĞ¡Ğ´¸ñÊ½£¬Ò²¾ÍÊÇµÚÒ»¸ö×ÖÄ¸Ğ¡Ğ´£¬Ê£ÏÂµÄÃ¿¸öµ¥´ÊµÄÊ××ÖÄ¸´óĞ´
 - ×¢ÊÍ
 ``` JavaScript
-    // µ¥ĞĞ×¢ÊÍ
+// µ¥ĞĞ×¢ÊÍ
 ```
 ``` JavaScript
-    /*
-    * ÕâÊÇÒ»¸ö¶àĞĞ
-    * £¨¿é¼¶£©×¢ÊÍ
-    */
+/*
+* ÕâÊÇÒ»¸ö¶àĞĞ
+* £¨¿é¼¶£©×¢ÊÍ
+*/
  ```
  - ÑÏ¸ñÄ£Ê½  
 ECMAScript 5 ÒıÈëÁËÑÏ¸ñÄ£Ê½£¨strict mode£©µÄ¸ÅÄî£¬ÓÃÓÚ¸ßËÙJavaScriptÒıÇæÇĞ»»µ½
 ÑÏ¸ñÄ£Ê½£¬ÑÏ¸ñÄ£Ê½ÏÂ£¬JavaScript µÄÖ´ĞĞ½á¹û»áÓĞºÜ´ó²»Í¬
 ``` JavaScript
-    "use strict";
+"use strict";
 ```
 - Óï¾ä  
 ECMAScript ÖĞµÄÓï¾äÒÔÒ»¸ö·ÖºÅ½áÎ²£»Èç¹ûÊ¡ÂÔ·ÖºÅ£¬ÔòÓÉ½âÎöÆ÷È·¶¨Óï¾äµÄ½áÎ²£¬½¨ÒéÓï¾ä½áÎ²¶¼¼ÓÉÏ·ÖºÅ
 ·ÀÖ¹Ñ¹ËõÎÄ¼şµÈ¸÷ÖÖ²»È·¶¨µÄÇé¿ö»á»á±¨´í
 ``` JavaScript
-    var sum = a + b // ¼´Ê¹Ã»ÓĞ·ÖºÅÒ²ÊÇÓĞĞ§µÄÓï¾ä¡ª¡ª²»ÍÆ¼ö
-    var diff = a - b; // ÓĞĞ§µÄÓï¾ä¡ª¡ªÍÆ¼ö
+var sum = a + b // ¼´Ê¹Ã»ÓĞ·ÖºÅÒ²ÊÇÓĞĞ§µÄÓï¾ä¡ª¡ª²»ÍÆ¼ö
+var diff = a - b; // ÓĞĞ§µÄÓï¾ä¡ª¡ªÍÆ¼ö
 ```
 ## ¹Ø¼ü×ÖºÍ±£Áô×Ö
 ²»¹ÜÓï·¨»á²»»á±¨´í¶¼²»½¨ÒéÊ¹ÓÃ¹Ø¼ü×Ö×÷Îª±êÊ¶·û
@@ -34,36 +34,36 @@ ECMAScript ÖĞµÄÓï¾äÒÔÒ»¸ö·ÖºÅ½áÎ²£»Èç¹ûÊ¡ÂÔ·ÖºÅ£¬ÔòÓÉ½âÎöÆ÷È·¶¨Óï¾äµÄ½áÎ²£¬½¨ÒéÓ
 ECMAScript µÄ±äÁ¿ÊÇËÉÉ¢ÀàĞÍµÄ£¬ËùÎ½ËÉÉ¢ÀàĞÍ¾ÍÊÇ¿ÉÒÔÓÃÀ´±£´æÈÎºÎÀàĞÍµÄÊı¾İ
 - ¶¨Òå±äÁ¿
 ``` JavaScript
-    var message; //undefined
+var message; //undefined
 ```
 - ¶¨Òå±äÁ¿³õÊ¼»¯¸³Öµ
 ``` JavaScript
-    var message = "hi";
+var message = "hi";
 ```
 - ¶¨Òå±äÁ¿³õÊ¼»¯¸³Öµ£¬¸ü¸Ä±äÁ¿µÄÖµ
 ``` JavaScript
-    var message = "hi";
-    message = 100; // ÓĞĞ§£¬µ«²»ÍÆ¼ö
+var message = "hi";
+message = 100; // ÓĞĞ§£¬µ«²»ÍÆ¼ö
 ```
 - ¾Ö²¿±äÁ¿
 ``` JavaScript
-    function test(){
-    var message = "hi"; // ¾Ö²¿±äÁ¿
-    }
-    test();
-    alert(message); // ´íÎó£¡
+function test(){
+var message = "hi"; // ¾Ö²¿±äÁ¿
+}
+test();
+alert(message); // ´íÎó£¡
 ```
 - Ä¬ÈÏÈ«¾Ö±äÁ¿
 ``` JavaScript
-    function test(){
-    message = "hi"; // È«¾Ö±äÁ¿
-    }
-    test();
-    alert(message); // "hi"
+function test(){
+message = "hi"; // È«¾Ö±äÁ¿
+}
+test();
+alert(message); // "hi"
 ```
 - Ò»´Î¶¨Òå¶à¸ö±äÁ¿
 ``` JavaScript
-    var message = "hi",found = false,age = 29;
+var message = "hi",found = false,age = 29;
 ```
 
 ## Êı¾İÀàĞÍ
@@ -80,50 +80,50 @@ ECMAScript µÄ±äÁ¿ÊÇËÉÉ¢ÀàĞÍµÄ£¬ËùÎ½ËÉÉ¢ÀàĞÍ¾ÍÊÇ¿ÉÒÔÓÃÀ´±£´æÈÎºÎÀàĞÍµÄÊı¾İ
   - "object"¡ª¡ªÈç¹ûÕâ¸öÖµÊÇ¶ÔÏó»ònull£»
   - "function"¡ª¡ªÈç¹ûÕâ¸öÖµÊÇº¯Êı£»
  ``` JavaScript
-    alert(typeof message); // "string"
-    alert(typeof (message)); // "string"
-    alert(typeof 95); // "number"
+alert(typeof message); // "string"
+alert(typeof (message)); // "string"
+alert(typeof 95); // "number"
 ```
 #### 2. Undefined ÀàĞÍ  
 - ÒıÈëÕâ¸öÖµÊÇÎªÁËÕıÊ½Çø·Ö¿Õ¶ÔÏóÖ¸ÕëÓëÎ´¾­³õÊ¼»¯µÄ±äÁ¿
  ``` JavaScript
-    var message;
-    alert(message == undefined); //true
+var message;
+alert(message == undefined); //true
 ```  
 - ±äÁ¿Î´ÉùÃ÷µ÷ÓÃ»á±¨´í
  ``` JavaScript
-    var message; // Õâ¸ö±äÁ¿ÉùÃ÷Ö®ºóÄ¬ÈÏÈ¡µÃÁËundefined Öµ
-    // ÏÂÃæÕâ¸ö±äÁ¿²¢Ã»ÓĞÉùÃ÷
-    // var age
-    alert(message); // "undefined"
-    alert(age); // ²úÉú´íÎó
+var message; // Õâ¸ö±äÁ¿ÉùÃ÷Ö®ºóÄ¬ÈÏÈ¡µÃÁËundefined Öµ
+// ÏÂÃæÕâ¸ö±äÁ¿²¢Ã»ÓĞÉùÃ÷
+// var age
+alert(message); // "undefined"
+alert(age); // ²úÉú´íÎó
 ```
 ±äÁ¿Î´ÉùÃ÷Ê¹ÓÃtypeofÀ´ÅĞ¶ÏÀàĞÍÒ²²»»á±¨´í·µ»Øundefined
  ``` JavaScript
-    var message; // Õâ¸ö±äÁ¿ÉùÃ÷Ö®ºóÄ¬ÈÏÈ¡µÃÁËundefined Öµ
-    // ÏÂÃæÕâ¸ö±äÁ¿²¢Ã»ÓĞÉùÃ÷
-    // var age
-    alert(typeof message); // "undefined"
-    alert(typeof age); // "undefined"
+var message; // Õâ¸ö±äÁ¿ÉùÃ÷Ö®ºóÄ¬ÈÏÈ¡µÃÁËundefined Öµ
+// ÏÂÃæÕâ¸ö±äÁ¿²¢Ã»ÓĞÉùÃ÷
+// var age
+alert(typeof message); // "undefined"
+alert(typeof age); // "undefined"
 ```
 #### 3. Null ÀàĞÍ  
 - NullÀàĞÍµÄÖµÖ»ÓĞ`null`£¬typeof¼ì²â·µ»ØobjectÀàĞÍ
 - undefined ÖµÊÇÅÉÉú×ÔnullÖµµÄ£¬Òò´ËECMA¹æ¶¨¶ÔËüÃÇµÄÏàµÈĞÔ²âÊÔÒª·µ»Øtrue
  ``` JavaScript
-    alert(null == undefined); //true
-    alert(null === undefined); //false
+alert(null == undefined); //true
+alert(null === undefined); //false
 ```
 - ÍÆ¼öÉùÃ÷¶ÔÏóÎªnull¾¡Á¿¸³Öµnull£¬ÕâÑù×ö²»½ö¿ÉÒÔÌåÏÖnull ×÷Îª¿Õ¶ÔÏóÖ¸ÕëµÄ¹ßÀı£¬
 ¶øÇÒÒ²ÓĞÖúÓÚ½øÒ»²½Çø·Önull ºÍundefined¡£
  ``` JavaScript
-    var params = null;
+var params = null;
 ```
 #### 4. Boolean ÀàĞÍ
 - BooleanÀàĞÍÖ»ÓĞÁ½¸ö×ÖÃæÖµ£ºtrue ºÍfalse
 - ½«Ò»¸öÖµ×ª»»ÎªÆä¶ÔÓ¦µÄBoolean Öµ£¬¿ÉÒÔµ÷ÓÃ×ªĞÍº¯ÊıBoolean()
  ``` JavaScript
-    var message = "Hello world!";
-    var messageAsBoolean = Boolean(message);
+var message = "Hello world!";
+var messageAsBoolean = Boolean(message);
 ```
 - Boolean×ª»»µÄ¹æÔò  
 
@@ -137,10 +137,163 @@ ECMAScript µÄ±äÁ¿ÊÇËÉÉ¢ÀàĞÍµÄ£¬ËùÎ½ËÉÉ¢ÀàĞÍ¾ÍÊÇ¿ÉÒÔÓÃÀ´±£´æÈÎºÎÀàĞÍµÄÊı¾İ
 
 - Á÷³ÌÓï¾äÅĞ¶Ï»á×Ô¶¯Ö´ĞĞBoolean×ª»»
  ``` JavaScript
-    var message = "Hello world!";
-    if (message){
+var message = "Hello world!";
+if (message){
     alert("Value is true");
-    }
+}
 ```
 
 #### 5. Number ÀàĞÍ
+- Ê¹ÓÃIEEE754 ¸ñÊ½À´±íÊ¾ÕûÊıºÍ¸¡µãÊıÖµ
+- ÊıÖµµÄ½øÖÆ±íÊ¾
+``` JavaScript
+var octalNum1 = 070; // °Ë½øÖÆµÄ56
+var octalNum2 = 079; // ÎŞĞ§µÄ°Ë½øÖÆÊıÖµ¡ª¡ª½âÎöÎª79
+var octalNum3 = 08; // ÎŞĞ§µÄ°Ë½øÖÆÊıÖµ¡ª¡ª½âÎöÎª8
+var hexNum1 = 0xA; // Ê®Áù½øÖÆµÄ10
+var hexNum2 = 0x1f; // Ê®Áù½øÖÆµÄ31
+```
+- ¸¡µãÊıÖµ
+``` JavaScript
+var floatNum1 = 1.1;
+var floatNum2 = 0.1;
+var floatNum3 = .1; // ÓĞĞ§£¬µ«²»ÍÆ¼ö
+var floatNum1 = 1.; // Ğ¡ÊıµãºóÃæÃ»ÓĞÊı×Ö¡ª¡ª½âÎöÎª1£¬²»ÍÆ¼ö
+var floatNum2 = 10.0; // ÕûÊı=>½âÎöÎª10
+var floatNum = 3.125e7; // eµÄ¿ÆÑ§¼ÆÊı·¨±íÊ¾µÈÓÚ31250000
+```
+- ¸¡µãÊı¼ÆËã  
+¸¡µãÊıÖµ¼ÆËã»á²úÉúÉáÈëÎó²îµÄÎÊÌâ£¬ÕâÊÇÊ¹ÓÃ»ùÓÚIEEE754 ÊıÖµµÄ¸¡µã¼ÆËãµÄÍ¨²¡
+``` JavaScript
+0.1 + 0.2 = 0.30000000000000004 //¼ÆËã´íÎó
+0.05 + 0.25 = 0.3 //¼ÆËãÕıÈ·
+0.15 + 0.15 = 0.3 //¼ÆËãÕıÈ·
+```
+- ÊıÖµ·¶Î§
+  - ×î´óÖµ£º`Number.MAX_VALUE`==1.7976931348623157e+308
+  - ×îĞ¡Öµ£º`Number.MIN_VALUE`==5e-324
+  - ¸ºÎŞÇî´ó£ºĞ¡ÓÚ×îĞ¡Öµ£¬`-Infinity`==`Number.POSITIVE_INFINITY`
+  - ÕıÎŞÇî´ó£º´óÓÚ×î´óÖµ£¬`Infinity`==`Number.NEGATIVE_INFINITY`
+  - ·¶Î§ÅĞ¶Ï
+``` JavaScript
+var result = Number.MAX_VALUE + Number.MAX_VALUE;
+alert(isFinite(result)); //false
+```
+- NaN  
+NaN£¬¼´·ÇÊıÖµ£¨Not a Number£©ÊÇÒ»¸öÌØÊâµÄÊıÖµ£¬Õâ¸öÊıÖµÓÃÓÚ±íÊ¾Ò»¸ö±¾À´Òª·µ»ØÊıÖµµÄ²Ù×÷Êı
+Î´·µ»ØÊıÖµµÄÇé¿ö£¨ÕâÑù¾Í²»»áÅ×³ö´íÎóÁË£©,¼ÆËã`ÊıÖµ/0`²»»á±¨´í
+``` JavaScript
+alert(NaN == NaN); //false
+alert(NaN / 10); //NaN,°üº¬NaNµÄ¼ÆËã½á¹û¶¼ÊÇNaN
+alert(isNaN(NaN)); //true
+alert(isNaN(10)); //false£¨10 ÊÇÒ»¸öÊıÖµ£©
+alert(isNaN("10")); //false£¨¿ÉÒÔ±»×ª»»³ÉÊıÖµ10£©
+alert(isNaN("blue")); //true£¨²»ÄÜ×ª»»³ÉÊıÖµ£©
+alert(isNaN(true)); //false£¨¿ÉÒÔ±»×ª»»³ÉÊıÖµ1£©
+```
+Ö»ÓĞ0 ³ıÒÔ0 ²Å»á·µ»ØNaN£¬ÕıÊı³ıÒÔ0 ·µ»ØInfinity£¬¸ºÊı³ıÒÔ0 ·µ»Ø-Infinity¡£  
+isNaN()Ò²ÊÊÓÃÓÚ¶ÔÏó£¬ÏÈµ÷ÓÃ¶ÔÏóvalueOf²»ÄÜ×ªÎªÊıÖµ£¬ÔÚµ÷ÓÃtoString()·½·¨
+- ÊıÖµÀàĞÍ×ª»»  
+
+Number()·½·¨
+``` JavaScript
+//Èç¹ûÊÇ Boolean Öµ£¬true ºÍfalse ½«·Ö±ğ±»×ª»»Îª1 ºÍ0
+Number(true); // 1
+Number(false); // 2
+
+//Èç¹ûÊÇÊı×ÖÖµ£¬Ö»ÊÇ¼òµ¥µÄ´«ÈëºÍ·µ»Ø
+Number(1);// 1
+
+//Èç¹ûÊÇ null Öµ£¬·µ»Ø0
+Number(null); //0
+
+//Èç¹ûÊÇ undefined£¬·µ»ØNaN¡£
+Number(undefined);//NaN
+
+//Èç¹ûÊÇ×Ö·û´®,È¥µôÇ°ºó¿Õ¸ñ£¬ÔÚ½øĞĞ×ª»»£¬¶ÔÏóÏÈvalueOf()ÔÙtoString()
+Number("123");//123
+Number("  123  ");//123
+Number("1.1");//1.1
+Number("0xA");//10
+Number("123a");//NaN
+Number("");//0
+Number("hello");//NaN
+```
+parseInt()·½·¨
+``` JavaScript
+parseInt("1234blue"); // 1234
+parseInt(""); // NaN
+parseInt("0xA"); // 10£¨Ê®Áù½øÖÆÊı£©
+parseInt(22.5); // 22
+parseInt("070"); // 56£¨°Ë½øÖÆÊı£©
+parseInt("70"); // 70£¨Ê®½øÖÆÊı£©
+parseInt("0xf"); // 15£¨Ê®Áù½øÖÆÊı£©
+```
+parseFloat()·½·¨
+``` JavaScript
+//µÚ¶ş¸ö²ÎÊıÎª½øÖÆ²ÎÊı
+parseInt("AF", 16); //175
+parseInt("AF"); //NaN
+parseInt("10", 2); //2 £¨°´¶ş½øÖÆ½âÎö£©
+parseInt("10", 8); //8 £¨°´°Ë½øÖÆ½âÎö£©
+parseInt("10", 10); //10 £¨°´Ê®½øÖÆ½âÎö£©
+parseInt("10", 16); //16 £¨°´Ê®Áù½øÖÆ½âÎö£©
+
+parseFloat("1234blue"); //1234 £¨ÕûÊı£©
+parseFloat("0xA"); //0
+parseFloat("22.5"); //22.5
+parseFloat("22.34.5"); //22.34
+parseFloat("0908.5"); //908.5
+parseFloat("3.125e7"); //31250000
+```
+#### 6. String ÀàĞÍ
+- ×Ö·û´®×ªÒå£¬`\+×Ö·û´®¸ñÊ½`ÓÃÓÚ×ªÒå
+
+    |   Êı¾İÀàĞÍ    |   ×ª»»ÎªtrueµÄÖµ   |   
+    |   :-               |   :-                         |   
+    |  \n |   »»ĞĞ  |
+    |  \t  |   ÖÆ±í  |
+    |  \b |   ¿Õ¸ñ  |
+    |  \r  |   »Ø³µ  |
+    |  \f  |   ½øÖ½  |
+    |  \\  |   Ğ±¸Ü  |
+    |  \\'  |   µ¥ÒıºÅ  |
+    |  \\"  |   Ë«ÒıºÅ  |
+    |  \xnn  |   ÒÔÊ®Áù½øÖÆ´úÂënn±íÊ¾µÄÒ»¸ö×Ö·û£¨ÆäÖĞnÎª0¡«F£©¡£ÀıÈç£¬\x41±íÊ¾"A"  |
+    |  \unnnn  |   ÒÔÊ®Áù½øÖÆ´úÂënnnn±íÊ¾µÄÒ»¸öUnicode×Ö·û£¨ÆäÖĞnÎª0¡«F£©¡£ÀıÈç£¬\u03a3±íÊ¾Ï£À°×Ö·û¦²  |
+
+
+- ×Ö·û´®ÌØµã  
+×Ö·û´®ÊÇ²»¿É±äµÄ£¬Ò²¾ÍÊÇËµ£¬×Ö·û´®Ò»µ©´´½¨£¬ËüÃÇµÄÖµ¾Í²»ÄÜ¸Ä±ä
+``` JavaScript
+var lang = "Java";
+lang = lang + "Script";
+//µÚÒ»ĞĞ´úÂë´´½¨×Ö·û´®
+//µÚ¶şĞĞ´úÂë´´½¨³¤¶ÈÎªÊ®Î»µÄĞÂµÄ×Ö·û´®£¬ÔÙ½²JavaºÍScriptÌî³ä½øÈ¥£¬Ïú»ÙÔ­ÓĞ×Ö·û´®
+//Ä³Ğ©¾É°æ±¾µÄä¯ÀÀÆ÷£¨ÀıÈç°æ±¾µÍÓÚ1.0 µÄFirefox¡¢IE6 µÈ£©ÖĞÆ´½Ó×Ö·û´®Ê±ËÙ¶ÈºÜÂıµÄÔ­ÒòËùÔÚ¡£
+//µ«ÕâĞ©ä¯ÀÀÆ÷ºóÀ´µÄ°æ±¾ÒÑ¾­½â¾öÁËÕâ¸öµÍĞ§ÂÊÎÊÌâ
+```
+- ×Ö·û´®×ª»»
+``` JavaScript
+var age = 11;
+var ageAsString = age.toString(); // ×Ö·û´®"11"
+var found = true;
+var foundAsString = found.toString(); // ×Ö·û´®"true"
+null.tosString() //±¨´í
+undefined.tosString() //±¨´í
+
+//½øÖÆ×ª»»
+var num = 10;
+alert(num.toString()); // "10"
+alert(num.toString(2)); // "1010"
+alert(num.toString(8)); // "12"
+alert(num.toString(10)); // "10"
+alert(num.toString(16)); // "a"
+
+//String·½·¨undefinedºÍnullÒ²¿ÉÒÔ×ª»»
+alert(String(10)); // "10"
+alert(String(true)); // "true"
+alert(String(null)); // "null"
+alert(String(undefined)); // "undefined"
+```
+#### 7. Object ÀàĞÍ
