文件编码格式统一替换为utf-8

--- a/javascript/基本概念.md
+++ b/javascript/基本概念.md
@@ -1,141 +1,141 @@
-# »ù±¾¸ÅÄî
-## Óï·¨
-- Çø·Ö´óĞ¡Ğ´
-- ±êÊ¶·û£ºËùÎ½±êÊ¶·û£¬¾ÍÊÇÖ¸±äÁ¿¡¢º¯Êı¡¢ÊôĞÔµÄÃû×Ö£¬»òÕßº¯ÊıµÄ²ÎÊı
-  - µÚÒ»¸ö×Ö·û±ØĞëÊÇÒ»¸ö×ÖÄ¸¡¢ÏÂ»®Ïß£¨_£©»òÒ»¸öÃÀÔª·ûºÅ£¨$£©
-  - ÆäËû×Ö·û¿ÉÒÔÊÇ×ÖÄ¸¡¢ÏÂ»®Ïß¡¢ÃÀÔª·ûºÅ»òÊı×Ö
-  - ²ÉÓÃÍÕ·å´óĞ¡Ğ´¸ñÊ½£¬Ò²¾ÍÊÇµÚÒ»¸ö×ÖÄ¸Ğ¡Ğ´£¬Ê£ÏÂµÄÃ¿¸öµ¥´ÊµÄÊ××ÖÄ¸´óĞ´
-- ×¢ÊÍ
+ï»¿# åŸºæœ¬æ¦‚å¿µ
+## è¯­æ³•
+- åŒºåˆ†å¤§å°å†™
+- æ ‡è¯†ç¬¦ï¼šæ‰€è°“æ ‡è¯†ç¬¦ï¼Œå°±æ˜¯æŒ‡å˜é‡ã€å‡½æ•°ã€å±æ€§çš„åå­—ï¼Œæˆ–è€…å‡½æ•°çš„å‚æ•°
+  - ç¬¬ä¸€ä¸ªå­—ç¬¦å¿…é¡»æ˜¯ä¸€ä¸ªå­—æ¯ã€ä¸‹åˆ’çº¿ï¼ˆ_ï¼‰æˆ–ä¸€ä¸ªç¾å…ƒç¬¦å·ï¼ˆ$ï¼‰
+  - å…¶ä»–å­—ç¬¦å¯ä»¥æ˜¯å­—æ¯ã€ä¸‹åˆ’çº¿ã€ç¾å…ƒç¬¦å·æˆ–æ•°å­—
+  - é‡‡ç”¨é©¼å³°å¤§å°å†™æ ¼å¼ï¼Œä¹Ÿå°±æ˜¯ç¬¬ä¸€ä¸ªå­—æ¯å°å†™ï¼Œå‰©ä¸‹çš„æ¯ä¸ªå•è¯çš„é¦–å­—æ¯å¤§å†™
+- æ³¨é‡Š
 ``` JavaScript
-// µ¥ĞĞ×¢ÊÍ
+// å•è¡Œæ³¨é‡Š
 ```
 ``` JavaScript
 /*
-* ÕâÊÇÒ»¸ö¶àĞĞ
-* £¨¿é¼¶£©×¢ÊÍ
+* è¿™æ˜¯ä¸€ä¸ªå¤šè¡Œ
+* ï¼ˆå—çº§ï¼‰æ³¨é‡Š
 */
  ```
- - ÑÏ¸ñÄ£Ê½  
-ECMAScript 5 ÒıÈëÁËÑÏ¸ñÄ£Ê½£¨strict mode£©µÄ¸ÅÄî£¬ÓÃÓÚ¸ßËÙJavaScriptÒıÇæÇĞ»»µ½
-ÑÏ¸ñÄ£Ê½£¬ÑÏ¸ñÄ£Ê½ÏÂ£¬JavaScript µÄÖ´ĞĞ½á¹û»áÓĞºÜ´ó²»Í¬
+ - ä¸¥æ ¼æ¨¡å¼  
+ECMAScript 5 å¼•å…¥äº†ä¸¥æ ¼æ¨¡å¼ï¼ˆstrict modeï¼‰çš„æ¦‚å¿µï¼Œç”¨äºé«˜é€ŸJavaScriptå¼•æ“åˆ‡æ¢åˆ°
+ä¸¥æ ¼æ¨¡å¼ï¼Œä¸¥æ ¼æ¨¡å¼ä¸‹ï¼ŒJavaScript çš„æ‰§è¡Œç»“æœä¼šæœ‰å¾ˆå¤§ä¸åŒ
 ``` JavaScript
 "use strict";
 ```
-- Óï¾ä  
-ECMAScript ÖĞµÄÓï¾äÒÔÒ»¸ö·ÖºÅ½áÎ²£»Èç¹ûÊ¡ÂÔ·ÖºÅ£¬ÔòÓÉ½âÎöÆ÷È·¶¨Óï¾äµÄ½áÎ²£¬½¨ÒéÓï¾ä½áÎ²¶¼¼ÓÉÏ·ÖºÅ
-·ÀÖ¹Ñ¹ËõÎÄ¼şµÈ¸÷ÖÖ²»È·¶¨µÄÇé¿ö»á»á±¨´í
+- è¯­å¥  
+ECMAScript ä¸­çš„è¯­å¥ä»¥ä¸€ä¸ªåˆ†å·ç»“å°¾ï¼›å¦‚æœçœç•¥åˆ†å·ï¼Œåˆ™ç”±è§£æå™¨ç¡®å®šè¯­å¥çš„ç»“å°¾ï¼Œå»ºè®®è¯­å¥ç»“å°¾éƒ½åŠ ä¸Šåˆ†å·
+é˜²æ­¢å‹ç¼©æ–‡ä»¶ç­‰å„ç§ä¸ç¡®å®šçš„æƒ…å†µä¼šä¼šæŠ¥é”™
 ``` JavaScript
-var sum = a + b // ¼´Ê¹Ã»ÓĞ·ÖºÅÒ²ÊÇÓĞĞ§µÄÓï¾ä¡ª¡ª²»ÍÆ¼ö
-var diff = a - b; // ÓĞĞ§µÄÓï¾ä¡ª¡ªÍÆ¼ö
+var sum = a + b // å³ä½¿æ²¡æœ‰åˆ†å·ä¹Ÿæ˜¯æœ‰æ•ˆçš„è¯­å¥â€”â€”ä¸æ¨è
+var diff = a - b; // æœ‰æ•ˆçš„è¯­å¥â€”â€”æ¨è
 ```
-## ¹Ø¼ü×ÖºÍ±£Áô×Ö
-²»¹ÜÓï·¨»á²»»á±¨´í¶¼²»½¨ÒéÊ¹ÓÃ¹Ø¼ü×Ö×÷Îª±êÊ¶·û
-## ±äÁ¿
-ECMAScript µÄ±äÁ¿ÊÇËÉÉ¢ÀàĞÍµÄ£¬ËùÎ½ËÉÉ¢ÀàĞÍ¾ÍÊÇ¿ÉÒÔÓÃÀ´±£´æÈÎºÎÀàĞÍµÄÊı¾İ
-- ¶¨Òå±äÁ¿
+## å…³é”®å­—å’Œä¿ç•™å­—
+ä¸ç®¡è¯­æ³•ä¼šä¸ä¼šæŠ¥é”™éƒ½ä¸å»ºè®®ä½¿ç”¨å…³é”®å­—ä½œä¸ºæ ‡è¯†ç¬¦
+## å˜é‡
+ECMAScript çš„å˜é‡æ˜¯æ¾æ•£ç±»å‹çš„ï¼Œæ‰€è°“æ¾æ•£ç±»å‹å°±æ˜¯å¯ä»¥ç”¨æ¥ä¿å­˜ä»»ä½•ç±»å‹çš„æ•°æ®
+- å®šä¹‰å˜é‡
 ``` JavaScript
 var message; //undefined
 ```
-- ¶¨Òå±äÁ¿³õÊ¼»¯¸³Öµ
+- å®šä¹‰å˜é‡åˆå§‹åŒ–èµ‹å€¼
 ``` JavaScript
 var message = "hi";
 ```
-- ¶¨Òå±äÁ¿³õÊ¼»¯¸³Öµ£¬¸ü¸Ä±äÁ¿µÄÖµ
+- å®šä¹‰å˜é‡åˆå§‹åŒ–èµ‹å€¼ï¼Œæ›´æ”¹å˜é‡çš„å€¼
 ``` JavaScript
 var message = "hi";
-message = 100; // ÓĞĞ§£¬µ«²»ÍÆ¼ö
+message = 100; // æœ‰æ•ˆï¼Œä½†ä¸æ¨è
 ```
-- ¾Ö²¿±äÁ¿
+- å±€éƒ¨å˜é‡
 ``` JavaScript
 function test(){
-var message = "hi"; // ¾Ö²¿±äÁ¿
+var message = "hi"; // å±€éƒ¨å˜é‡
 }
 test();
-alert(message); // ´íÎó£¡
+alert(message); // é”™è¯¯ï¼
 ```
-- Ä¬ÈÏÈ«¾Ö±äÁ¿
+- é»˜è®¤å…¨å±€å˜é‡
 ``` JavaScript
 function test(){
-message = "hi"; // È«¾Ö±äÁ¿
+message = "hi"; // å…¨å±€å˜é‡
 }
 test();
 alert(message); // "hi"
 ```
-- Ò»´Î¶¨Òå¶à¸ö±äÁ¿
+- ä¸€æ¬¡å®šä¹‰å¤šä¸ªå˜é‡
 ``` JavaScript
 var message = "hi",found = false,age = 29;
 ```
 
-## Êı¾İÀàĞÍ
->5ÖÖ¼òµ¥Êı¾İÀàĞÍ£¨Ò²³ÆÎª»ù±¾Êı¾İÀàĞÍ£©£º`Undefined`¡¢`Null`¡¢`Boolean`¡¢`Number`ºÍ`String`  
+## æ•°æ®ç±»å‹
+>5ç§ç®€å•æ•°æ®ç±»å‹ï¼ˆä¹Ÿç§°ä¸ºåŸºæœ¬æ•°æ®ç±»å‹ï¼‰ï¼š`Undefined`ã€`Null`ã€`Boolean`ã€`Number`å’Œ`String`  
 
->1ÖĞ¸´ÔÓµÄÊı¾İÀàĞÍ£º`Object `£¬£¬Object ±¾ÖÊÉÏÊÇÓÉÒ»×éÎŞĞòµÄÃûÖµ¶Ô×é³ÉµÄ
+>1ä¸­å¤æ‚çš„æ•°æ®ç±»å‹ï¼š`Object `ï¼Œï¼ŒObject æœ¬è´¨ä¸Šæ˜¯ç”±ä¸€ç»„æ— åºçš„åå€¼å¯¹ç»„æˆçš„
 
->ÓÉÓÚECMAScript Êı¾İÀàĞÍ¾ßÓĞ¶¯Ì¬ĞÔ£¬Òò´ËµÄÈ·Ã»ÓĞÔÙ¶¨ÒåÆäËûÊı¾İÀàĞÍµÄ±ØÒªÁË
+>ç”±äºECMAScript æ•°æ®ç±»å‹å…·æœ‰åŠ¨æ€æ€§ï¼Œå› æ­¤çš„ç¡®æ²¡æœ‰å†å®šä¹‰å…¶ä»–æ•°æ®ç±»å‹çš„å¿…è¦äº†
 
-#### 1. typeof ²Ù×÷·û
-  - "undefined"¡ª¡ªÈç¹ûÕâ¸öÖµÎ´¶¨Òå£»
-  - "boolean"¡ª¡ªÈç¹ûÕâ¸öÖµÊÇ²¼¶ûÖµ£»
-  - "string"¡ª¡ªÈç¹ûÕâ¸öÖµÊÇ×Ö·û´®£»
-  - "object"¡ª¡ªÈç¹ûÕâ¸öÖµÊÇ¶ÔÏó»ònull£»
-  - "function"¡ª¡ªÈç¹ûÕâ¸öÖµÊÇº¯Êı£»
+#### 1. typeof æ“ä½œç¬¦
+  - "undefined"â€”â€”å¦‚æœè¿™ä¸ªå€¼æœªå®šä¹‰ï¼›
+  - "boolean"â€”â€”å¦‚æœè¿™ä¸ªå€¼æ˜¯å¸ƒå°”å€¼ï¼›
+  - "string"â€”â€”å¦‚æœè¿™ä¸ªå€¼æ˜¯å­—ç¬¦ä¸²ï¼›
+  - "object"â€”â€”å¦‚æœè¿™ä¸ªå€¼æ˜¯å¯¹è±¡æˆ–nullï¼›
+  - "function"â€”â€”å¦‚æœè¿™ä¸ªå€¼æ˜¯å‡½æ•°ï¼›
  ``` JavaScript
 alert(typeof message); // "string"
 alert(typeof (message)); // "string"
 alert(typeof 95); // "number"
 ```
-#### 2. Undefined ÀàĞÍ  
-- ÒıÈëÕâ¸öÖµÊÇÎªÁËÕıÊ½Çø·Ö¿Õ¶ÔÏóÖ¸ÕëÓëÎ´¾­³õÊ¼»¯µÄ±äÁ¿
+#### 2. Undefined ç±»å‹  
+- å¼•å…¥è¿™ä¸ªå€¼æ˜¯ä¸ºäº†æ­£å¼åŒºåˆ†ç©ºå¯¹è±¡æŒ‡é’ˆä¸æœªç»åˆå§‹åŒ–çš„å˜é‡
  ``` JavaScript
 var message;
 alert(message == undefined); //true
 ```  
-- ±äÁ¿Î´ÉùÃ÷µ÷ÓÃ»á±¨´í
+- å˜é‡æœªå£°æ˜è°ƒç”¨ä¼šæŠ¥é”™
  ``` JavaScript
-var message; // Õâ¸ö±äÁ¿ÉùÃ÷Ö®ºóÄ¬ÈÏÈ¡µÃÁËundefined Öµ
-// ÏÂÃæÕâ¸ö±äÁ¿²¢Ã»ÓĞÉùÃ÷
+var message; // è¿™ä¸ªå˜é‡å£°æ˜ä¹‹åé»˜è®¤å–å¾—äº†undefined å€¼
+// ä¸‹é¢è¿™ä¸ªå˜é‡å¹¶æ²¡æœ‰å£°æ˜
 // var age
 alert(message); // "undefined"
-alert(age); // ²úÉú´íÎó
+alert(age); // äº§ç”Ÿé”™è¯¯
 ```
-±äÁ¿Î´ÉùÃ÷Ê¹ÓÃtypeofÀ´ÅĞ¶ÏÀàĞÍÒ²²»»á±¨´í·µ»Øundefined
+å˜é‡æœªå£°æ˜ä½¿ç”¨typeofæ¥åˆ¤æ–­ç±»å‹ä¹Ÿä¸ä¼šæŠ¥é”™è¿”å›undefined
  ``` JavaScript
-var message; // Õâ¸ö±äÁ¿ÉùÃ÷Ö®ºóÄ¬ÈÏÈ¡µÃÁËundefined Öµ
-// ÏÂÃæÕâ¸ö±äÁ¿²¢Ã»ÓĞÉùÃ÷
+var message; // è¿™ä¸ªå˜é‡å£°æ˜ä¹‹åé»˜è®¤å–å¾—äº†undefined å€¼
+// ä¸‹é¢è¿™ä¸ªå˜é‡å¹¶æ²¡æœ‰å£°æ˜
 // var age
 alert(typeof message); // "undefined"
 alert(typeof age); // "undefined"
 ```
-#### 3. Null ÀàĞÍ  
-- NullÀàĞÍµÄÖµÖ»ÓĞ`null`£¬typeof¼ì²â·µ»ØobjectÀàĞÍ
-- undefined ÖµÊÇÅÉÉú×ÔnullÖµµÄ£¬Òò´ËECMA¹æ¶¨¶ÔËüÃÇµÄÏàµÈĞÔ²âÊÔÒª·µ»Øtrue
+#### 3. Null ç±»å‹  
+- Nullç±»å‹çš„å€¼åªæœ‰`null`ï¼Œtypeofæ£€æµ‹è¿”å›objectç±»å‹
+- undefined å€¼æ˜¯æ´¾ç”Ÿè‡ªnullå€¼çš„ï¼Œå› æ­¤ECMAè§„å®šå¯¹å®ƒä»¬çš„ç›¸ç­‰æ€§æµ‹è¯•è¦è¿”å›true
  ``` JavaScript
 alert(null == undefined); //true
 alert(null === undefined); //false
 ```
-- ÍÆ¼öÉùÃ÷¶ÔÏóÎªnull¾¡Á¿¸³Öµnull£¬ÕâÑù×ö²»½ö¿ÉÒÔÌåÏÖnull ×÷Îª¿Õ¶ÔÏóÖ¸ÕëµÄ¹ßÀı£¬
-¶øÇÒÒ²ÓĞÖúÓÚ½øÒ»²½Çø·Önull ºÍundefined¡£
+- æ¨èå£°æ˜å¯¹è±¡ä¸ºnullå°½é‡èµ‹å€¼nullï¼Œè¿™æ ·åšä¸ä»…å¯ä»¥ä½“ç°null ä½œä¸ºç©ºå¯¹è±¡æŒ‡é’ˆçš„æƒ¯ä¾‹ï¼Œ
+è€Œä¸”ä¹Ÿæœ‰åŠ©äºè¿›ä¸€æ­¥åŒºåˆ†null å’Œundefinedã€‚
  ``` JavaScript
 var params = null;
 ```
-#### 4. Boolean ÀàĞÍ
-- BooleanÀàĞÍÖ»ÓĞÁ½¸ö×ÖÃæÖµ£ºtrue ºÍfalse
-- ½«Ò»¸öÖµ×ª»»ÎªÆä¶ÔÓ¦µÄBoolean Öµ£¬¿ÉÒÔµ÷ÓÃ×ªĞÍº¯ÊıBoolean()
+#### 4. Boolean ç±»å‹
+- Booleanç±»å‹åªæœ‰ä¸¤ä¸ªå­—é¢å€¼ï¼štrue å’Œfalse
+- å°†ä¸€ä¸ªå€¼è½¬æ¢ä¸ºå…¶å¯¹åº”çš„Boolean å€¼ï¼Œå¯ä»¥è°ƒç”¨è½¬å‹å‡½æ•°Boolean()
  ``` JavaScript
 var message = "Hello world!";
 var messageAsBoolean = Boolean(message);
 ```
-- Boolean×ª»»µÄ¹æÔò  
+- Booleanè½¬æ¢çš„è§„åˆ™  
 
-    |   Êı¾İÀàĞÍ    |   ×ª»»ÎªtrueµÄÖµ   |   ×ªÎªfalseµÄÖµ   |
+    |   æ•°æ®ç±»å‹    |   è½¬æ¢ä¸ºtrueçš„å€¼   |   è½¬ä¸ºfalseçš„å€¼   |
     |   :-               |   :-                         |   :-                      |
     |  Boolean  |   true  |   false  |
-    |  String  |   ÈÎºÎ·Ç¿Õ×Ö·û´®  |   ""£¨¿Õ×Ö·û´®£©  |
-    |  Number  |   ÈÎºÎ·ÇÁãÊı×ÖÖµ£¨°üÀ¨ÎŞÇî´ó£©  |   0ºÍNaN  |
-    |  Object  |   ÈÎºÎ¶ÔÏó  |   null  |
+    |  String  |   ä»»ä½•éç©ºå­—ç¬¦ä¸²  |   ""ï¼ˆç©ºå­—ç¬¦ä¸²ï¼‰  |
+    |  Number  |   ä»»ä½•éé›¶æ•°å­—å€¼ï¼ˆåŒ…æ‹¬æ— ç©·å¤§ï¼‰  |   0å’ŒNaN  |
+    |  Object  |   ä»»ä½•å¯¹è±¡  |   null  |
     |  Undefined  |   -  |   undefined  |
 
-- Á÷³ÌÓï¾äÅĞ¶Ï»á×Ô¶¯Ö´ĞĞBoolean×ª»»
+- æµç¨‹è¯­å¥åˆ¤æ–­ä¼šè‡ªåŠ¨æ‰§è¡ŒBooleanè½¬æ¢
  ``` JavaScript
 var message = "Hello world!";
 if (message){
@@ -143,75 +143,75 @@ if (message){
 }
 ```
 
-#### 5. Number ÀàĞÍ
-- Ê¹ÓÃIEEE754 ¸ñÊ½À´±íÊ¾ÕûÊıºÍ¸¡µãÊıÖµ
-- ÊıÖµµÄ½øÖÆ±íÊ¾
+#### 5. Number ç±»å‹
+- ä½¿ç”¨IEEE754 æ ¼å¼æ¥è¡¨ç¤ºæ•´æ•°å’Œæµ®ç‚¹æ•°å€¼
+- æ•°å€¼çš„è¿›åˆ¶è¡¨ç¤º
 ``` JavaScript
-var octalNum1 = 070; // °Ë½øÖÆµÄ56
-var octalNum2 = 079; // ÎŞĞ§µÄ°Ë½øÖÆÊıÖµ¡ª¡ª½âÎöÎª79
-var octalNum3 = 08; // ÎŞĞ§µÄ°Ë½øÖÆÊıÖµ¡ª¡ª½âÎöÎª8
-var hexNum1 = 0xA; // Ê®Áù½øÖÆµÄ10
-var hexNum2 = 0x1f; // Ê®Áù½øÖÆµÄ31
+var octalNum1 = 070; // å…«è¿›åˆ¶çš„56
+var octalNum2 = 079; // æ— æ•ˆçš„å…«è¿›åˆ¶æ•°å€¼â€”â€”è§£æä¸º79
+var octalNum3 = 08; // æ— æ•ˆçš„å…«è¿›åˆ¶æ•°å€¼â€”â€”è§£æä¸º8
+var hexNum1 = 0xA; // åå…­è¿›åˆ¶çš„10
+var hexNum2 = 0x1f; // åå…­è¿›åˆ¶çš„31
 ```
-- ¸¡µãÊıÖµ
+- æµ®ç‚¹æ•°å€¼
 ``` JavaScript
 var floatNum1 = 1.1;
 var floatNum2 = 0.1;
-var floatNum3 = .1; // ÓĞĞ§£¬µ«²»ÍÆ¼ö
-var floatNum1 = 1.; // Ğ¡ÊıµãºóÃæÃ»ÓĞÊı×Ö¡ª¡ª½âÎöÎª1£¬²»ÍÆ¼ö
-var floatNum2 = 10.0; // ÕûÊı=>½âÎöÎª10
-var floatNum = 3.125e7; // eµÄ¿ÆÑ§¼ÆÊı·¨±íÊ¾µÈÓÚ31250000
+var floatNum3 = .1; // æœ‰æ•ˆï¼Œä½†ä¸æ¨è
+var floatNum1 = 1.; // å°æ•°ç‚¹åé¢æ²¡æœ‰æ•°å­—â€”â€”è§£æä¸º1ï¼Œä¸æ¨è
+var floatNum2 = 10.0; // æ•´æ•°=>è§£æä¸º10
+var floatNum = 3.125e7; // eçš„ç§‘å­¦è®¡æ•°æ³•è¡¨ç¤ºç­‰äº31250000
 ```
-- ¸¡µãÊı¼ÆËã  
-¸¡µãÊıÖµ¼ÆËã»á²úÉúÉáÈëÎó²îµÄÎÊÌâ£¬ÕâÊÇÊ¹ÓÃ»ùÓÚIEEE754 ÊıÖµµÄ¸¡µã¼ÆËãµÄÍ¨²¡
+- æµ®ç‚¹æ•°è®¡ç®—  
+æµ®ç‚¹æ•°å€¼è®¡ç®—ä¼šäº§ç”Ÿèˆå…¥è¯¯å·®çš„é—®é¢˜ï¼Œè¿™æ˜¯ä½¿ç”¨åŸºäºIEEE754 æ•°å€¼çš„æµ®ç‚¹è®¡ç®—çš„é€šç—…
 ``` JavaScript
-0.1 + 0.2 = 0.30000000000000004 //¼ÆËã´íÎó
-0.05 + 0.25 = 0.3 //¼ÆËãÕıÈ·
-0.15 + 0.15 = 0.3 //¼ÆËãÕıÈ·
+0.1 + 0.2 = 0.30000000000000004 //è®¡ç®—é”™è¯¯
+0.05 + 0.25 = 0.3 //è®¡ç®—æ­£ç¡®
+0.15 + 0.15 = 0.3 //è®¡ç®—æ­£ç¡®
 ```
-- ÊıÖµ·¶Î§
-  - ×î´óÖµ£º`Number.MAX_VALUE`==1.7976931348623157e+308
-  - ×îĞ¡Öµ£º`Number.MIN_VALUE`==5e-324
-  - ¸ºÎŞÇî´ó£ºĞ¡ÓÚ×îĞ¡Öµ£¬`-Infinity`==`Number.POSITIVE_INFINITY`
-  - ÕıÎŞÇî´ó£º´óÓÚ×î´óÖµ£¬`Infinity`==`Number.NEGATIVE_INFINITY`
-  - ·¶Î§ÅĞ¶Ï
+- æ•°å€¼èŒƒå›´
+  - æœ€å¤§å€¼ï¼š`Number.MAX_VALUE`==1.7976931348623157e+308
+  - æœ€å°å€¼ï¼š`Number.MIN_VALUE`==5e-324
+  - è´Ÿæ— ç©·å¤§ï¼šå°äºæœ€å°å€¼ï¼Œ`-Infinity`==`Number.POSITIVE_INFINITY`
+  - æ­£æ— ç©·å¤§ï¼šå¤§äºæœ€å¤§å€¼ï¼Œ`Infinity`==`Number.NEGATIVE_INFINITY`
+  - èŒƒå›´åˆ¤æ–­
 ``` JavaScript
 var result = Number.MAX_VALUE + Number.MAX_VALUE;
 alert(isFinite(result)); //false
 ```
 - NaN  
 
-NaN£¬¼´·ÇÊıÖµ£¨Not a Number£©ÊÇÒ»¸öÌØÊâµÄÊıÖµ£¬Õâ¸öÊıÖµÓÃÓÚ±íÊ¾Ò»¸ö±¾À´Òª·µ»ØÊıÖµµÄ²Ù×÷Êı
-Î´·µ»ØÊıÖµµÄÇé¿ö£¨ÕâÑù¾Í²»»áÅ×³ö´íÎóÁË£©,¼ÆËã`ÊıÖµ/0`²»»á±¨´í
+NaNï¼Œå³éæ•°å€¼ï¼ˆNot a Numberï¼‰æ˜¯ä¸€ä¸ªç‰¹æ®Šçš„æ•°å€¼ï¼Œè¿™ä¸ªæ•°å€¼ç”¨äºè¡¨ç¤ºä¸€ä¸ªæœ¬æ¥è¦è¿”å›æ•°å€¼çš„æ“ä½œæ•°
+æœªè¿”å›æ•°å€¼çš„æƒ…å†µï¼ˆè¿™æ ·å°±ä¸ä¼šæŠ›å‡ºé”™è¯¯äº†ï¼‰,è®¡ç®—`æ•°å€¼/0`ä¸ä¼šæŠ¥é”™
 ``` JavaScript
 alert(NaN == NaN); //false
-alert(NaN / 10); //NaN,°üº¬NaNµÄ¼ÆËã½á¹û¶¼ÊÇNaN
+alert(NaN / 10); //NaN,åŒ…å«NaNçš„è®¡ç®—ç»“æœéƒ½æ˜¯NaN
 alert(isNaN(NaN)); //true
-alert(isNaN(10)); //false£¨10 ÊÇÒ»¸öÊıÖµ£©
-alert(isNaN("10")); //false£¨¿ÉÒÔ±»×ª»»³ÉÊıÖµ10£©
-alert(isNaN("blue")); //true£¨²»ÄÜ×ª»»³ÉÊıÖµ£©
-alert(isNaN(true)); //false£¨¿ÉÒÔ±»×ª»»³ÉÊıÖµ1£©
+alert(isNaN(10)); //falseï¼ˆ10 æ˜¯ä¸€ä¸ªæ•°å€¼ï¼‰
+alert(isNaN("10")); //falseï¼ˆå¯ä»¥è¢«è½¬æ¢æˆæ•°å€¼10ï¼‰
+alert(isNaN("blue")); //trueï¼ˆä¸èƒ½è½¬æ¢æˆæ•°å€¼ï¼‰
+alert(isNaN(true)); //falseï¼ˆå¯ä»¥è¢«è½¬æ¢æˆæ•°å€¼1ï¼‰
 ```
-Ö»ÓĞ0 ³ıÒÔ0 ²Å»á·µ»ØNaN£¬ÕıÊı³ıÒÔ0 ·µ»ØInfinity£¬¸ºÊı³ıÒÔ0 ·µ»Ø-Infinity¡£  
-isNaN()Ò²ÊÊÓÃÓÚ¶ÔÏó£¬ÏÈµ÷ÓÃ¶ÔÏóvalueOf²»ÄÜ×ªÎªÊıÖµ£¬ÔÚµ÷ÓÃtoString()·½·¨
-- ÊıÖµÀàĞÍ×ª»»  
+åªæœ‰0 é™¤ä»¥0 æ‰ä¼šè¿”å›NaNï¼Œæ­£æ•°é™¤ä»¥0 è¿”å›Infinityï¼Œè´Ÿæ•°é™¤ä»¥0 è¿”å›-Infinityã€‚  
+isNaN()ä¹Ÿé€‚ç”¨äºå¯¹è±¡ï¼Œå…ˆè°ƒç”¨å¯¹è±¡valueOfä¸èƒ½è½¬ä¸ºæ•°å€¼ï¼Œåœ¨è°ƒç”¨toString()æ–¹æ³•
+- æ•°å€¼ç±»å‹è½¬æ¢  
 
-Number()·½·¨
+Number()æ–¹æ³•
 ``` JavaScript
-//Èç¹ûÊÇ Boolean Öµ£¬true ºÍfalse ½«·Ö±ğ±»×ª»»Îª1 ºÍ0
+//å¦‚æœæ˜¯ Boolean å€¼ï¼Œtrue å’Œfalse å°†åˆ†åˆ«è¢«è½¬æ¢ä¸º1 å’Œ0
 Number(true); // 1
 Number(false); // 2
 
-//Èç¹ûÊÇÊı×ÖÖµ£¬Ö»ÊÇ¼òµ¥µÄ´«ÈëºÍ·µ»Ø
+//å¦‚æœæ˜¯æ•°å­—å€¼ï¼Œåªæ˜¯ç®€å•çš„ä¼ å…¥å’Œè¿”å›
 Number(1);// 1
 
-//Èç¹ûÊÇ null Öµ£¬·µ»Ø0
+//å¦‚æœæ˜¯ null å€¼ï¼Œè¿”å›0
 Number(null); //0
 
-//Èç¹ûÊÇ undefined£¬·µ»ØNaN¡£
+//å¦‚æœæ˜¯ undefinedï¼Œè¿”å›NaNã€‚
 Number(undefined);//NaN
 
-//Èç¹ûÊÇ×Ö·û´®,È¥µôÇ°ºó¿Õ¸ñ£¬ÔÚ½øĞĞ×ª»»£¬¶ÔÏóÏÈvalueOf()ÔÙtoString()
+//å¦‚æœæ˜¯å­—ç¬¦ä¸²,å»æ‰å‰åç©ºæ ¼ï¼Œåœ¨è¿›è¡Œè½¬æ¢ï¼Œå¯¹è±¡å…ˆvalueOf()å†toString()
 Number("123");//123
 Number("  123  ");//123
 Number("1.1");//1.1
@@ -220,70 +220,70 @@ Number("123a");//NaN
 Number("");//0
 Number("hello");//NaN
 ```
-parseInt()·½·¨
+parseInt()æ–¹æ³•
 ``` JavaScript
 parseInt("1234blue"); // 1234
 parseInt(""); // NaN
-parseInt("0xA"); // 10£¨Ê®Áù½øÖÆÊı£©
+parseInt("0xA"); // 10ï¼ˆåå…­è¿›åˆ¶æ•°ï¼‰
 parseInt(22.5); // 22
-parseInt("070"); // 56£¨°Ë½øÖÆÊı£©
-parseInt("70"); // 70£¨Ê®½øÖÆÊı£©
-parseInt("0xf"); // 15£¨Ê®Áù½øÖÆÊı£©
+parseInt("070"); // 56ï¼ˆå…«è¿›åˆ¶æ•°ï¼‰
+parseInt("70"); // 70ï¼ˆåè¿›åˆ¶æ•°ï¼‰
+parseInt("0xf"); // 15ï¼ˆåå…­è¿›åˆ¶æ•°ï¼‰
 ```
-parseFloat()·½·¨
+parseFloat()æ–¹æ³•
 ``` JavaScript
-//µÚ¶ş¸ö²ÎÊıÎª½øÖÆ²ÎÊı
+//ç¬¬äºŒä¸ªå‚æ•°ä¸ºè¿›åˆ¶å‚æ•°
 parseInt("AF", 16); //175
 parseInt("AF"); //NaN
-parseInt("10", 2); //2 £¨°´¶ş½øÖÆ½âÎö£©
-parseInt("10", 8); //8 £¨°´°Ë½øÖÆ½âÎö£©
-parseInt("10", 10); //10 £¨°´Ê®½øÖÆ½âÎö£©
-parseInt("10", 16); //16 £¨°´Ê®Áù½øÖÆ½âÎö£©
+parseInt("10", 2); //2 ï¼ˆæŒ‰äºŒè¿›åˆ¶è§£æï¼‰
+parseInt("10", 8); //8 ï¼ˆæŒ‰å…«è¿›åˆ¶è§£æï¼‰
+parseInt("10", 10); //10 ï¼ˆæŒ‰åè¿›åˆ¶è§£æï¼‰
+parseInt("10", 16); //16 ï¼ˆæŒ‰åå…­è¿›åˆ¶è§£æï¼‰
 
-parseFloat("1234blue"); //1234 £¨ÕûÊı£©
+parseFloat("1234blue"); //1234 ï¼ˆæ•´æ•°ï¼‰
 parseFloat("0xA"); //0
 parseFloat("22.5"); //22.5
 parseFloat("22.34.5"); //22.34
 parseFloat("0908.5"); //908.5
 parseFloat("3.125e7"); //31250000
 ```
-#### 6. String ÀàĞÍ
-- ×Ö·û´®×ªÒå£¬`\+×Ö·û´®¸ñÊ½`ÓÃÓÚ×ªÒå
+#### 6. String ç±»å‹
+- å­—ç¬¦ä¸²è½¬ä¹‰ï¼Œ`\+å­—ç¬¦ä¸²æ ¼å¼`ç”¨äºè½¬ä¹‰
 
-    |   Êı¾İÀàĞÍ    |   ×ª»»ÎªtrueµÄÖµ   |   
+    |   æ•°æ®ç±»å‹    |   è½¬æ¢ä¸ºtrueçš„å€¼   |   
     |   :-               |   :-                         |   
-    |  \n |   »»ĞĞ  |
-    |  \t  |   ÖÆ±í  |
-    |  \b |   ¿Õ¸ñ  |
-    |  \r  |   »Ø³µ  |
-    |  \f  |   ½øÖ½  |
-    |  \\  |   Ğ±¸Ü  |
-    |  \\'  |   µ¥ÒıºÅ  |
-    |  \\"  |   Ë«ÒıºÅ  |
-    |  \xnn  |   ÒÔÊ®Áù½øÖÆ´úÂënn±íÊ¾µÄÒ»¸ö×Ö·û£¨ÆäÖĞnÎª0¡«F£©¡£ÀıÈç£¬\x41±íÊ¾"A"  |
-    |  \unnnn  |   ÒÔÊ®Áù½øÖÆ´úÂënnnn±íÊ¾µÄÒ»¸öUnicode×Ö·û£¨ÆäÖĞnÎª0¡«F£©¡£ÀıÈç£¬\u03a3±íÊ¾Ï£À°×Ö·û¦²  |
+    |  \n |   æ¢è¡Œ  |
+    |  \t  |   åˆ¶è¡¨  |
+    |  \b |   ç©ºæ ¼  |
+    |  \r  |   å›è½¦  |
+    |  \f  |   è¿›çº¸  |
+    |  \\  |   æ–œæ   |
+    |  \\'  |   å•å¼•å·  |
+    |  \\"  |   åŒå¼•å·  |
+    |  \xnn  |   ä»¥åå…­è¿›åˆ¶ä»£ç nnè¡¨ç¤ºçš„ä¸€ä¸ªå­—ç¬¦ï¼ˆå…¶ä¸­nä¸º0ï½Fï¼‰ã€‚ä¾‹å¦‚ï¼Œ\x41è¡¨ç¤º"A"  |
+    |  \unnnn  |   ä»¥åå…­è¿›åˆ¶ä»£ç nnnnè¡¨ç¤ºçš„ä¸€ä¸ªUnicodeå­—ç¬¦ï¼ˆå…¶ä¸­nä¸º0ï½Fï¼‰ã€‚ä¾‹å¦‚ï¼Œ\u03a3è¡¨ç¤ºå¸Œè…Šå­—ç¬¦Î£  |
 
 
-- ×Ö·û´®ÌØµã  
-×Ö·û´®ÊÇ²»¿É±äµÄ£¬Ò²¾ÍÊÇËµ£¬×Ö·û´®Ò»µ©´´½¨£¬ËüÃÇµÄÖµ¾Í²»ÄÜ¸Ä±ä
+- å­—ç¬¦ä¸²ç‰¹ç‚¹  
+å­—ç¬¦ä¸²æ˜¯ä¸å¯å˜çš„ï¼Œä¹Ÿå°±æ˜¯è¯´ï¼Œå­—ç¬¦ä¸²ä¸€æ—¦åˆ›å»ºï¼Œå®ƒä»¬çš„å€¼å°±ä¸èƒ½æ”¹å˜
 ``` JavaScript
 var lang = "Java";
 lang = lang + "Script";
-//µÚÒ»ĞĞ´úÂë´´½¨×Ö·û´®
-//µÚ¶şĞĞ´úÂë´´½¨³¤¶ÈÎªÊ®Î»µÄĞÂµÄ×Ö·û´®£¬ÔÙ½²JavaºÍScriptÌî³ä½øÈ¥£¬Ïú»ÙÔ­ÓĞ×Ö·û´®
-//Ä³Ğ©¾É°æ±¾µÄä¯ÀÀÆ÷£¨ÀıÈç°æ±¾µÍÓÚ1.0 µÄFirefox¡¢IE6 µÈ£©ÖĞÆ´½Ó×Ö·û´®Ê±ËÙ¶ÈºÜÂıµÄÔ­ÒòËùÔÚ¡£
-//µ«ÕâĞ©ä¯ÀÀÆ÷ºóÀ´µÄ°æ±¾ÒÑ¾­½â¾öÁËÕâ¸öµÍĞ§ÂÊÎÊÌâ
+//ç¬¬ä¸€è¡Œä»£ç åˆ›å»ºå­—ç¬¦ä¸²
+//ç¬¬äºŒè¡Œä»£ç åˆ›å»ºé•¿åº¦ä¸ºåä½çš„æ–°çš„å­—ç¬¦ä¸²ï¼Œå†è®²Javaå’ŒScriptå¡«å……è¿›å»ï¼Œé”€æ¯åŸæœ‰å­—ç¬¦ä¸²
+//æŸäº›æ—§ç‰ˆæœ¬çš„æµè§ˆå™¨ï¼ˆä¾‹å¦‚ç‰ˆæœ¬ä½äº1.0 çš„Firefoxã€IE6 ç­‰ï¼‰ä¸­æ‹¼æ¥å­—ç¬¦ä¸²æ—¶é€Ÿåº¦å¾ˆæ…¢çš„åŸå› æ‰€åœ¨ã€‚
+//ä½†è¿™äº›æµè§ˆå™¨åæ¥çš„ç‰ˆæœ¬å·²ç»è§£å†³äº†è¿™ä¸ªä½æ•ˆç‡é—®é¢˜
 ```
-- ×Ö·û´®×ª»»
+- å­—ç¬¦ä¸²è½¬æ¢
 ``` JavaScript
 var age = 11;
-var ageAsString = age.toString(); // ×Ö·û´®"11"
+var ageAsString = age.toString(); // å­—ç¬¦ä¸²"11"
 var found = true;
-var foundAsString = found.toString(); // ×Ö·û´®"true"
-null.tosString() //±¨´í
-undefined.tosString() //±¨´í
+var foundAsString = found.toString(); // å­—ç¬¦ä¸²"true"
+null.tosString() //æŠ¥é”™
+undefined.tosString() //æŠ¥é”™
 
-//½øÖÆ×ª»»
+//è¿›åˆ¶è½¬æ¢
 var num = 10;
 alert(num.toString()); // "10"
 alert(num.toString(2)); // "1010"
@@ -291,24 +291,24 @@ alert(num.toString(8)); // "12"
 alert(num.toString(10)); // "10"
 alert(num.toString(16)); // "a"
 
-//String·½·¨undefinedºÍnullÒ²¿ÉÒÔ×ª»»
+//Stringæ–¹æ³•undefinedå’Œnullä¹Ÿå¯ä»¥è½¬æ¢
 alert(String(10)); // "10"
 alert(String(true)); // "true"
 alert(String(null)); // "null"
 alert(String(undefined)); // "undefined"
 ```
-#### 7. Object ÀàĞÍ
-- constructor£º±£´æ×ÅÓÃÓÚ´´½¨µ±Ç°¶ÔÏóµÄº¯Êı¡£¶ÔÓÚÇ°ÃæµÄÀı×Ó¶øÑÔ£¬¹¹Ôìº¯Êı£¨constructor£©
-¾ÍÊÇObject()¡£
-- hasOwnProperty(propertyName)£ºÓÃÓÚ¼ì²é¸ø¶¨µÄÊôĞÔÔÚµ±Ç°¶ÔÏóÊµÀıÖĞ£¨¶ø²»ÊÇÔÚÊµÀı
-µÄÔ­ĞÍÖĞ£©ÊÇ·ñ´æÔÚ¡£ÆäÖĞ£¬×÷Îª²ÎÊıµÄÊôĞÔÃû£¨propertyName£©±ØĞëÒÔ×Ö·û´®ĞÎÊ½Ö¸¶¨£¨Àı
-Èç£ºo.hasOwnProperty("name")£©¡£
-- isPrototypeOf(object)£ºÓÃÓÚ¼ì²é´«ÈëµÄ¶ÔÏóÊÇ·ñÊÇ´«Èë¶ÔÏóµÄÔ­ĞÍ£¨µÚ5 ÕÂ½«ÌÖÂÛÔ­
-ĞÍ£©¡£
-- propertyIsEnumerable(propertyName)£ºÓÃÓÚ¼ì²é¸ø¶¨µÄÊôĞÔÊÇ·ñÄÜ¹»Ê¹ÓÃfor-in Óï¾ä
-£¨±¾ÕÂºóÃæ½«»áÌÖÂÛ£©À´Ã¶¾Ù¡£ÓëhasOwnProperty()·½·¨Ò»Ñù£¬×÷Îª²ÎÊıµÄÊôĞÔÃû±ØĞëÒÔ×Ö·û
-´®ĞÎÊ½Ö¸¶¨¡£
-- toLocaleString()£º·µ»Ø¶ÔÏóµÄ×Ö·û´®±íÊ¾£¬¸Ã×Ö·û´®ÓëÖ´ĞĞ»·¾³µÄµØÇø¶ÔÓ¦¡£
-- toString()£º·µ»Ø¶ÔÏóµÄ×Ö·û´®±íÊ¾¡£
-- valueOf()£º·µ»Ø¶ÔÏóµÄ×Ö·û´®¡¢ÊıÖµ»ò²¼¶ûÖµ±íÊ¾¡£Í¨³£ÓëtoString()·½·¨µÄ·µ»ØÖµ
-ÏàÍ¬¡£
+#### 7. Object ç±»å‹
+- constructorï¼šä¿å­˜ç€ç”¨äºåˆ›å»ºå½“å‰å¯¹è±¡çš„å‡½æ•°ã€‚å¯¹äºå‰é¢çš„ä¾‹å­è€Œè¨€ï¼Œæ„é€ å‡½æ•°ï¼ˆconstructorï¼‰
+å°±æ˜¯Object()ã€‚
+- hasOwnProperty(propertyName)ï¼šç”¨äºæ£€æŸ¥ç»™å®šçš„å±æ€§åœ¨å½“å‰å¯¹è±¡å®ä¾‹ä¸­ï¼ˆè€Œä¸æ˜¯åœ¨å®ä¾‹
+çš„åŸå‹ä¸­ï¼‰æ˜¯å¦å­˜åœ¨ã€‚å…¶ä¸­ï¼Œä½œä¸ºå‚æ•°çš„å±æ€§åï¼ˆpropertyNameï¼‰å¿…é¡»ä»¥å­—ç¬¦ä¸²å½¢å¼æŒ‡å®šï¼ˆä¾‹
+å¦‚ï¼šo.hasOwnProperty("name")ï¼‰ã€‚
+- isPrototypeOf(object)ï¼šç”¨äºæ£€æŸ¥ä¼ å…¥çš„å¯¹è±¡æ˜¯å¦æ˜¯ä¼ å…¥å¯¹è±¡çš„åŸå‹ï¼ˆç¬¬5 ç« å°†è®¨è®ºåŸ
+å‹ï¼‰ã€‚
+- propertyIsEnumerable(propertyName)ï¼šç”¨äºæ£€æŸ¥ç»™å®šçš„å±æ€§æ˜¯å¦èƒ½å¤Ÿä½¿ç”¨for-in è¯­å¥
+ï¼ˆæœ¬ç« åé¢å°†ä¼šè®¨è®ºï¼‰æ¥æšä¸¾ã€‚ä¸hasOwnProperty()æ–¹æ³•ä¸€æ ·ï¼Œä½œä¸ºå‚æ•°çš„å±æ€§åå¿…é¡»ä»¥å­—ç¬¦
+ä¸²å½¢å¼æŒ‡å®šã€‚
+- toLocaleString()ï¼šè¿”å›å¯¹è±¡çš„å­—ç¬¦ä¸²è¡¨ç¤ºï¼Œè¯¥å­—ç¬¦ä¸²ä¸æ‰§è¡Œç¯å¢ƒçš„åœ°åŒºå¯¹åº”ã€‚
+- toString()ï¼šè¿”å›å¯¹è±¡çš„å­—ç¬¦ä¸²è¡¨ç¤ºã€‚
+- valueOf()ï¼šè¿”å›å¯¹è±¡çš„å­—ç¬¦ä¸²ã€æ•°å€¼æˆ–å¸ƒå°”å€¼è¡¨ç¤ºã€‚é€šå¸¸ä¸toString()æ–¹æ³•çš„è¿”å›å€¼
+ç›¸åŒã€‚
