去掉部分没用的文档

--- a/javascript/基本概念.md
+++ b/javascript/基本概念.md
@@ -303,8 +303,7 @@ alert(String(undefined)); // "undefined"
 - hasOwnProperty(propertyName)：用于检查给定的属性在当前对象实例中（而不是在实例
 的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例
 如：o.hasOwnProperty("name")）。
-- isPrototypeOf(object)：用于检查传入的对象是否是传入对象的原型（第5 章将讨论原
-型）。
+- isPrototypeOf(object)：用于检查传入的对象是否是传入对象的原型。
 - propertyIsEnumerable(propertyName)：用于检查给定的属性是否能够使用for-in 语句
 （本章后面将会讨论）来枚举。与hasOwnProperty()方法一样，作为参数的属性名必须以字符
 串形式指定。
