文字格式调整

--- a/javascript/03-语法和数据类型.md
+++ b/javascript/03-语法和数据类型.md
@@ -1,5 +1,5 @@
-﻿# 基本概念
-## 语法
+﻿## 基本概念
+### 语法
 - 区分大小写
 - 标识符：所谓标识符，就是指变量、函数、属性的名字，或者函数的参数
   - 第一个字符必须是一个字母、下划线（_）或一个美元符号（$）
@@ -28,9 +28,9 @@ ECMAScript 中的语句以一个分号结尾；如果省略分号，则由解析
 var sum = a + b // 即使没有分号也是有效的语句——不推荐
 var diff = a - b; // 有效的语句——推荐
 ```
-## 关键字和保留字
+### 关键字和保留字
 不管语法会不会报错都不建议使用关键字作为标识符
-## 变量
+### 变量
 ECMAScript 的变量是松散类型的，所谓松散类型就是可以用来保存任何类型的数据
 - 定义变量
 ``` JavaScript
@@ -66,7 +66,7 @@ alert(message); // "hi"
 var message = "hi",found = false,age = 29;
 ```
 
-## 数据类型
+### 数据类型
 >5种简单数据类型（也称为基本数据类型）：`Undefined`、`Null`、`Boolean`、`Number`和`String`  
 
 >1中复杂的数据类型：`Object `，，Object 本质上是由一组无序的名值对组成的
