--- a/javascript/04-操作符.md
+++ b/javascript/04-操作符.md
@@ -1,7 +1,7 @@
-﻿# 操作符
+﻿## 操作符
 主要组用于操作数据值，应用于对象时，相应的操作符通常都会调用对象的valueOf()
 和（或）toString()方法，以便取得可以操作的值
-## 一元操作符
+### 一元操作符
 #### 1.  递增递减操作符
 - 递增递减操作
 ``` JavaScript 
@@ -50,7 +50,7 @@ num = +num; // 仍然是25
 var num = 25;
 num = -num; // 变成了-25
 ```
-#### 3.  位操作符
+### 位操作符
 - 底层使用32位二进制进行计算
 - 进制转换计算
 > 1. 18
@@ -117,7 +117,7 @@ var newValue = oldValue >>> 5; // 等于二进制的10 ，即十进制的2
 var oldValue = -64; // 等于二进制的11111111111111111111111111000000
 var newValue = oldValue >>> 5; // 等于十进制的134217726
 ```
-#### 4.  布尔操作符
+##  布尔操作符
 - 逻辑非，由一个叹号（!）,计算先进行Boolean方法转换在进行取反
 ``` JavaScript 
 alert(!false); // true
@@ -155,10 +155,10 @@ alert(result); // 这一行不会执行
 ``` JavaScript
 var result = 6 && 7 && 8 //结果为6 
 ``` 
-#### 5. 乘性操作符
+###  乘性操作符
 - 乘法，由一个星号（*）表示，用于计算两个数值的乘积，都先进行Number方法转换，在计算不可计算返回NaN
 - 除法，由一个斜线符号（/）表示，用于计算两个数的商，都先进行Number方法转换，在计算不可计算返回NaN
-#### 6. 加性操作符
+###  加性操作符
 - 加法，直接将非数值的类型用String方法转换在进行相加
 ``` JavaScript
 var result1 = 5 + 5; // 两个数值相加
@@ -186,12 +186,12 @@ var result4 = 5 - ""; // 5，因为"" 被转换成了0
 var result5 = 5 - "2"; // 3，因为"2"被转换成了2
 var result6 = 5 - null; // 5，因为null 被转换成了0
 ``` 
-#### 7. 关系操作符
+### 关系操作符
 - 主要用于相互之间的比较，小于（<）、大于（>）、小于等于（<=）和大于等于（>=）
 - 不可比较的对象先进行String方法转换在进行比较
 - 字符串的比较都是进行编码的数值转换后比较
 - 包含NaN的比较返回false
-#### 8. 相等操作符
+###  相等操作符
 - 相等和不相等，会对左右的数据进行自动隐式的类型转换在进行比较处理
 ``` JavaScript
 null == undefined //true
@@ -214,7 +214,7 @@ var result2 = ("55" === 55); //false，因为不同的数据类型不相等
 var result1 = ("55" != 55); //false，因为转换后相等
 var result2 = ("55" !== 55); //true，因为不同的数据类型不相等
 ```
-#### 9. 赋值操作符 
+### 赋值操作符 
 - 乘/赋值（*=）；
 - 除/赋值（/=）；
 - 模/赋值（%=）；
@@ -223,7 +223,7 @@ var result2 = ("55" !== 55); //true，因为不同的数据类型不相等
 - 左移/赋值（<<=）；
 - 有符号右移/赋值（>>=）；
 - 无符号右移/赋值（>>>=）；
-#### 10. 逗号操作符
+### 逗号操作符
 - 主要用于多个变量赋值，定义操作
 ``` JavaScript
 var num1=1, num2=2, num3=3;
