--- a/javascript/08-引用类型（一）.md
+++ b/javascript/08-引用类型（一）.md
@@ -1,4 +1,4 @@
-﻿## 引用类型
+﻿## 引用类型（一）
 ### Object类型
 - 构造函数定义
 ``` JavaScript
@@ -263,8 +263,117 @@ var date2 = new Date(2007, 1, 1); //"February 1, 2007"
 alert(date1 < date2); //true
 alert(date1 > date2); //false
 ```
-<!--
+- 时间各个浏览器有差异，所以使用详细查询API或者引用第三方类库方便处理操作
 ### RegExp类型
-### Function类型
-### 基本包装类型
-### 单体内置对象-->
+#### 1. 基本表达式
+``` JavaScript
+var expression = / pattern / flags ;
+```
+#### 2. 模式
+- g：表示全局（global）模式，即模式将被应用于所有字符串，而非在发现第一个匹配项时立即
+停止；
+- i：表示不区分大小写（case-insensitive）模式，即在确定匹配项时忽略模式与字符串的大小写；
+- m：表示多行（multiline）模式，即在到达一行文本末尾时还会继续查找下一行中是否存在与模
+式匹配的项。
+``` JavaScript
+var pattern1 = /at/g;   //匹配字符串中所有"at"的实例
+var pattern2 = /[bc]at/i;   //匹配第一个"bat"或"cat"，不区分大小写
+var pattern3 = /.at/gi;   //匹配所有以"at"结尾的3 个字符的组合，不区分大小写
+```
+#### 3. 不同方式定义
+``` JavaScript
+var pattern1 = /[bc]at/i; //匹配第一个"bat"或"cat"，不区分大小写
+var pattern2 = new RegExp("[bc]at", "i");  //与pattern1 相同，只不过是使用构造函数创建的
+```
+#### 4. 匹配位置
+``` JavaScript
+var re = /cat/g;,i;
+for (i=0; i < 10; i++){
+    //每次匹配都从上一次的位置开始，到了末尾再从第一个字符开始
+    re.test("catastrophe");
+}
+for (i=0; i < 10; i++){
+    //每次匹配都从第一个字符开始，因为正则表达式每次都是新创建的
+    re = new RegExp("cat", "g");
+    re.test("catastrophe");
+}
+```
+#### 5. 实例属性
+- global：布尔值，表示是否设置了g 标志。
+- ignoreCase：布尔值，表示是否设置了i 标志。
+- lastIndex：整数，表示开始搜索下一个匹配项的字符位置，从0 算起。
+- multiline：布尔值，表示是否设置了m 标志。
+- source：正则表达式的字符串表示，按照字面量形式而非传入构造函数中的字符串模式返回。
+``` JavaScript
+var pattern1 = /\[bc\]at/i;
+
+alert(pattern1.global); //false
+alert(pattern1.ignoreCase); //true
+alert(pattern1.multiline); //false
+alert(pattern1.lastIndex); //0
+alert(pattern1.source); //"\[bc\]at"
+
+var pattern2 = new RegExp("\\[bc\\]at", "i");
+
+alert(pattern2.global); //false
+alert(pattern2.ignoreCase); //true
+alert(pattern2.multiline); //false
+alert(pattern2.lastIndex); //0
+alert(pattern2.source); //"\[bc\]at"
+```
+#### 6. 实例方法
+- exec方法全局匹配
+``` JavaScript
+var text = "mom and dad and baby";
+var pattern = /mom( and dad( and baby)?)?/gi;
+
+var matches = pattern.exec(text);
+alert(matches.index); // 0
+alert(matches.input); // "mom and dad and baby"
+alert(matches[0]); // "mom and dad and baby"
+alert(matches[1]); // " and dad and baby"
+alert(matches[2]); // " and baby"
+```
+- exec单个匹配
+``` JavaScript
+var text = "cat, bat, sat, fat";
+var pattern1 = /.at/;
+
+var matches = pattern1.exec(text);
+alert(matches.index); //0
+alert(matches[0]); //cat
+alert(pattern1.lastIndex); //0
+
+matches = pattern1.exec(text);
+alert(matches.index); //0
+alert(matches[0]); //cat
+alert(pattern1.lastIndex); //0
+```
+``` JavaScript
+var pattern2 = /.at/g;
+
+var matches = pattern2.exec(text);
+alert(matches.index); //0
+alert(matches[0]); //cat
+alert(pattern2.lastIndex); //3
+
+matches = pattern2.exec(text);
+alert(matches.index); //5
+alert(matches[0]); //bat
+alert(pattern2.lastIndex); //8
+```
+- test检测是否匹配
+``` JavaScript
+var text = "000-00-0000";
+var pattern = /\d{3}-\d{2}-\d{4}/;
+if (pattern.test(text)){
+    alert("The pattern was matched.");
+}
+```
+#### 6. 构造函数属性
+- 各个浏览器对构造函数属性的实现有差异，需要使用详细的查看api在使用
+#### 7. 模式的局限性
+- ECMAScript 中的正则表达式功能还是比较完备的，但仍然缺少某些语言（特别是Perl）所支
+持的高级正则表达式特性
+- 即使存在这些限制，ECMAScript 正则表达式仍然是非常强大的，能够帮我们完成绝大多数模式匹
+配任务
