统一路由格式

--- a/src/notes/javascript/01.md
+++ b/src/notes/javascript/01.md
@@ -10,9 +10,9 @@
 
 :::snippet JavaScript 的组成
 
-1. 核心（ECMAScript）：JavaScript 的一个标准，JavaScript 只是实现了 ECMAScript 的其中一种脚本语言，ActionScript 同样也实现了 ECMAScript
-2. 文档对象模型（DOM）：XML 但经过扩展用于 HTML 的应用程序编程接口，主要用于操作 HTML 的元素
-3. 浏览器对象模型（BOM）：可以控制浏览器显示的页面以外的部分，弹窗、cookies 等
+1. 核心`ECMAScript`：JavaScript 的一个标准，JavaScript 只是实现了 ECMAScript 的其中一种脚本语言，ActionScript 同样也实现了 ECMAScript
+2. 文档对象模型`DOM`：XML 但经过扩展用于 HTML 的应用程序编程接口，主要用于操作 HTML 的元素
+3. 浏览器对象模型`BOM`：可以控制浏览器显示的页面以外的部分，弹窗、cookies 等
 
 :::
 
@@ -20,11 +20,11 @@
 
 1. 弹出新浏览器窗口的功能；
 2. 移动、缩放和关闭浏览器窗口的功能；
-3. 提供浏览器详细信息的 navigator 对象；
-4. 提供浏览器所加载页面的详细信息的 location 对象；
-5. 提供用户显示器分辨率详细信息的 screen 对象；
-6. 对 cookies 的支持；
-7. 像 XMLHttpRequest 和 IE 的 ActiveXObject 这样的自定义对象
+3. 提供浏览器详细信息的`navigator`对象；
+4. 提供浏览器所加载页面的详细信息的`location`对象；
+5. 提供用户显示器分辨率详细信息的`screen`对象；
+6. 对`cookies`的支持；
+7. 像`XMLHttpRequest`和 IE 的`ActiveXObject`这样的自定义对象
 
 :::
 
@@ -43,7 +43,7 @@
 ### 引用外部文件
 
 ```html
-<script type="text/javascript" src="example1.js"></script>
+<script type="text/javascript" src="example.js"></script>
 ```
 
 ### 引用外部文件优点
@@ -67,7 +67,7 @@
 
 ```html
 <script type="text/javascript" async="async" src="example1.js"></script>
-<script type="text/javascript" defer="defer" src="example1.js"></script>
+<script type="text/javascript" defer="defer" src="example2.js"></script>
 ```
 
 :::
@@ -96,7 +96,7 @@
 
 :::snippet 文档模式
 
-IE5.5 引入了文档模式的概念，而这个概念是通过使用文档类型（doctype）切换实现的，指定文档的解析标准，目前发展到 Html5 基本都
+IE5.5 引入了文档模式的概念，而这个概念是通过使用文档类型`doctype`切换实现的，指定文档的解析标准，目前发展到 HTML5 基本都
 使用最新的标准`<!DOCTYPE html>`
 
 ```html
