--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -2,7 +2,7 @@
 
 1. 区分大小写
 2. 标识符：所谓标识符，就是指变量、函数、属性的名字，或者函数的参数
-   - 第一个字符必须是一个字母、下划线（\_）或一个美元符号（\$）
+   - 第一个字符必须是一个字母、下划线（`_`）或一个美元符号（`$`）
    - 其他字符可以是字母、下划线、美元符号或数字
    - 采用驼峰大小写格式，也就是第一个字母小写，剩下的每个单词的首字母大写
 3. 注释
@@ -60,7 +60,7 @@ message = 100; // 有效，但不推荐
 
 ```JavaScript
 function test(){
-var message = "hi"; // 局部变量
+    var message = "hi"; // 局部变量
 }
 test();
 alert(message); // 错误！
@@ -70,7 +70,7 @@ alert(message); // 错误！
 
 ```JavaScript
 function test(){
-message = "hi"; // 全局变量
+    message = "hi"; // 全局变量
 }
 test();
 alert(message); // "hi"
@@ -88,48 +88,45 @@ var message = "hi",found = false,age = 29;
 
 1. 5 种简单数据类型（也称为基本数据类型）：`Undefined`、`Null`、`Boolean`、`Number`和`String`
 2. 数据类型都可以通过关键字`typeof`操作符，获取字段的类型
-
-- `undefined`未定义
-- `boolean`布尔值
-- `string`字符串
-- `number`数值
-- `object`对象或`null`
-- `function`函数
+   - `undefined`未定义
+   - `boolean`布尔值
+   - `string`字符串
+   - `number`数值
+   - `object`对象或`null`
+   - `function`函数
+3. `typeof`获取对应的数据类型
 
 ```javascript
 alert(typeof message); // "string"
-alert(typeof (message)); // "string"
+alert(typeof message); // "string"
 alert(typeof 95); // "number"
 ```
 
-中复杂的数据类型：`Object`，Object 本质上是由一组无序的名值对组成的
+4. 复杂的数据类型：`Object`，Object 本质上是由一组无序的键值对组成的
 
-由于`ECMAScript`数据类型具有动态性，因此的确没有再定义其他数据类型的必要了
+5. 由于`ECMAScript`数据类型具有动态性，因此的确没有再定义其他数据类型的必要了
 
 :::
 
-<!--
+:::snippet Undefined 类型
 
-### 2. Undefined 类型
-
-- 引入这个值是为了正式区分空对象指针与未经初始化的变量
+1. 引入这个值是为了正式区分空对象指针与未经初始化的变量
 
 ```JavaScript
 var message;
 alert(message == undefined); //true
 ```
 
-- 变量未声明调用会报错
+2. 变量未声明调用会报错
 
 ```JavaScript
 var message; // 这个变量声明之后默认取得了undefined 值
-// 下面这个变量并没有声明
-// var age
+// 下面这个变量并没有声明，var age
 alert(message); // "undefined"
 alert(age); // 产生错误
 ```
 
-变量未声明使用 typeof 来判断类型也不会报错返回 undefined
+3. 变量未声明使用 typeof 来判断类型也不会报错返回 undefined
 
 ```JavaScript
 var message; // 这个变量声明之后默认取得了undefined 值
@@ -139,44 +136,49 @@ alert(typeof message); // "undefined"
 alert(typeof age); // "undefined"
 ```
 
-### 3. Null 类型
+:::
 
-- Null 类型的值只有`null`，typeof 检测返回 object 类型
-- undefined 值是派生自 null 值的，因此 ECMA 规定对它们的相等性测试要返回 true
+:::snippet Null 类型
+
+1. Null 类型的值只有`null`，typeof 检测返回 object 类型
+2. undefined 值是派生自 null 值的，因此 ECMA 规定对它们的相等性测试要返回 true
 
 ```JavaScript
 alert(null == undefined); //true
 alert(null === undefined); //false
 ```
 
-- 推荐声明对象为 null 尽量赋值 null，这样做不仅可以体现 null 作为空对象指针的惯例，
-  而且也有助于进一步区分 null 和 undefined。
+3. 推荐声明对象为 null 尽量赋值 null，这样做不仅可以体现 null 作为空对象指针的惯例，
+   而且也有助于进一步区分 null 和 undefined。
 
 ```JavaScript
 var params = null;
 ```
 
-### 4. Boolean 类型
+:::
 
-- Boolean 类型只有两个字面值：true 和 false
-- 将一个值转换为其对应的 Boolean 值，可以调用转型函数 Boolean()
+:::snippet Boolean 类型
+
+1. Boolean 类型只有两个字面值：true 和 false
+
+2. 将一个值转换为其对应的 Boolean 值，可以调用转型函数 Boolean()
 
 ```JavaScript
 var message = "Hello world!";
 var messageAsBoolean = Boolean(message);
 ```
 
-- Boolean 转换的规则
+3. Boolean 转换的规则
 
-  | 数据类型  | 转换为 true 的值             | 转为 false 的值 |
-  | :-------- | :--------------------------- | :-------------- |
-  | Boolean   | true                         | false           |
-  | String    | 任何非空字符串               | ""（空字符串）  |
-  | Number    | 任何非零数字值（包括无穷大） | 0 和 NaN        |
-  | Object    | 任何对象                     | null            |
-  | Undefined | -                            | undefined       |
+| 数据类型  | 转换为 true 的值             | 转为 false 的值 |
+| :-------- | :--------------------------- | :-------------- |
+| Boolean   | true                         | false           |
+| String    | 任何非空字符串               | ""（空字符串）  |
+| Number    | 任何非零数字值（包括无穷大） | 0 和 NaN        |
+| Object    | 任何对象                     | null            |
+| Undefined | -                            | undefined       |
 
-- 流程语句判断会自动执行 Boolean 转换
+4. 流程语句判断会自动执行 Boolean 转换
 
 ```JavaScript
 var message = "Hello world!";
@@ -185,10 +187,12 @@ if (message){
 }
 ```
 
-### 5. Number 类型
+:::
 
-- 使用 IEEE754 格式来表示整数和浮点数值
-- 数值的进制表示
+:::snippet Number 类型
+
+1. 使用 IEEE754 格式来表示整数和浮点数值
+2. 数值的进制表示
 
 ```JavaScript
 var octalNum1 = 070; // 八进制的56
@@ -198,7 +202,7 @@ var hexNum1 = 0xA; // 十六进制的10
 var hexNum2 = 0x1f; // 十六进制的31
 ```
 
-- 浮点数值
+3. 浮点数值
 
 ```JavaScript
 var floatNum1 = 1.1;
@@ -209,8 +213,8 @@ var floatNum2 = 10.0; // 整数=>解析为10
 var floatNum = 3.125e7; // e的科学计数法表示等于31250000
 ```
 
-- 浮点数计算
-  浮点数值计算会产生舍入误差的问题，这是使用基于 IEEE754 数值的浮点计算的通病
+4. 浮点数计算
+   浮点数值计算会产生舍入误差的问题，这是使用基于 IEEE754 数值的浮点计算的通病
 
 ```JavaScript
 0.1 + 0.2 = 0.30000000000000004 //计算错误
@@ -218,19 +222,19 @@ var floatNum = 3.125e7; // e的科学计数法表示等于31250000
 0.15 + 0.15 = 0.3 //计算正确
 ```
 
-- 数值范围
-  - 最大值：`Number.MAX_VALUE`==1.7976931348623157e+308
-  - 最小值：`Number.MIN_VALUE`==5e-324
-  - 负无穷大：小于最小值，`-Infinity`==`Number.POSITIVE_INFINITY`
-  - 正无穷大：大于最大值，`Infinity`==`Number.NEGATIVE_INFINITY`
-  - 范围判断
+5. 数值范围
+   - 最大值：`Number.MAX_VALUE`==1.7976931348623157e+308
+   - 最小值：`Number.MIN_VALUE`==5e-324
+   - 负无穷大：小于最小值，`-Infinity`==`Number.POSITIVE_INFINITY`
+   - 正无穷大：大于最大值，`Infinity`==`Number.NEGATIVE_INFINITY`
+   - 范围判断
 
 ```JavaScript
 var result = Number.MAX_VALUE + Number.MAX_VALUE;
 alert(isFinite(result)); //false
 ```
 
-- NaN
+6. NaN
 
 NaN，即非数值（Not a Number）是一个特殊的数值，这个数值用于表示一个本来要返回数值的操作数
 未返回数值的情况（这样就不会抛出错误了）,计算`数值/0`不会报错
@@ -248,9 +252,9 @@ alert(isNaN(true)); //false（可以被转换成数值1）
 只有 0 除以 0 才会返回 NaN，正数除以 0 返回 Infinity，负数除以 0 返回-Infinity。
 isNaN()也适用于对象，先调用对象 valueOf 不能转为数值，在调用 toString()方法
 
-- 数值类型转换
+7. 数值类型转换
 
-Number()方法
+`Number()`方法
 
 ```JavaScript
 //如果是 Boolean 值，true 和false 将分别被转换为1 和0
@@ -276,7 +280,7 @@ Number("");//0
 Number("hello");//NaN
 ```
 
-parseInt()方法
+`parseInt()`方法
 
 ```JavaScript
 parseInt("1234blue"); // 1234
@@ -288,7 +292,7 @@ parseInt("70"); // 70（十进制数）
 parseInt("0xf"); // 15（十六进制数）
 ```
 
-parseFloat()方法
+`parseFloat()`方法
 
 ```JavaScript
 //第二个参数为进制参数
@@ -307,25 +311,27 @@ parseFloat("0908.5"); //908.5
 parseFloat("3.125e7"); //31250000
 ```
 
-### 6. String 类型
+:::
 
-- 字符串转义，`\+字符串格式`用于转义
+:::snippet String 类型
 
-  | 数据类型 | 转换为 true 的值                                                                             |
-  | :------- | :------------------------------------------------------------------------------------------- |
-  | \n       | 换行                                                                                         |
-  | \t       | 制表                                                                                         |
-  | \b       | 空格                                                                                         |
-  | \r       | 回车                                                                                         |
-  | \f       | 进纸                                                                                         |
-  | \\       | 斜杠                                                                                         |
-  | \\'      | 单引号                                                                                       |
-  | \\"      | 双引号                                                                                       |
-  | \xnn     | 以十六进制代码 nn 表示的一个字符（其中 n 为 0 ～ F）。例如，\x41 表示"A"                     |
-  | \unnnn   | 以十六进制代码 nnnn 表示的一个 Unicode 字符（其中 n 为 0 ～ F）。例如，\u03a3 表示希腊字符 Σ |
+1. 字符串转义，`\+字符串格式`用于转义
 
-* 字符串特点
-  字符串是不可变的，也就是说，字符串一旦创建，它们的值就不能改变
+| 数据类型 | 转换为 true 的值                                                                             |
+| :------- | :------------------------------------------------------------------------------------------- |
+| \n       | 换行                                                                                         |
+| \t       | 制表                                                                                         |
+| \b       | 空格                                                                                         |
+| \r       | 回车                                                                                         |
+| \f       | 进纸                                                                                         |
+| \\       | 斜杠                                                                                         |
+| \\'      | 单引号                                                                                       |
+| \\"      | 双引号                                                                                       |
+| \xnn     | 以十六进制代码 nn 表示的一个字符（其中 n 为 0 ～ F）。例如，\x41 表示"A"                     |
+| \unnnn   | 以十六进制代码 nnnn 表示的一个 Unicode 字符（其中 n 为 0 ～ F）。例如，\u03a3 表示希腊字符 Σ |
+
+2. 字符串特点
+   字符串是不可变的，也就是说，字符串一旦创建，它们的值就不能改变
 
 ```JavaScript
 var lang = "Java";
@@ -336,7 +342,7 @@ lang = lang + "Script";
 //但这些浏览器后来的版本已经解决了这个低效率问题
 ```
 
-- 字符串转换
+3. 字符串转换
 
 ```JavaScript
 var age = 11;
@@ -361,18 +367,21 @@ alert(String(null)); // "null"
 alert(String(undefined)); // "undefined"
 ```
 
-### 7. Object 类型
+:::
 
-- constructor：保存着用于创建当前对象的函数。对于前面的例子而言，构造函数（constructor）
-  就是 Object()。
-- hasOwnProperty(propertyName)：用于检查给定的属性在当前对象实例中（而不是在实例
-  的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例
-  如：o.hasOwnProperty("name")）。
-- isPrototypeOf(object)：用于检查传入的对象是否是传入对象的原型。
-- propertyIsEnumerable(propertyName)：用于检查给定的属性是否能够使用 for-in 语句
-  （本章后面将会讨论）来枚举。与 hasOwnProperty()方法一样，作为参数的属性名必须以字符
-  串形式指定。
-- toLocaleString()：返回对象的字符串表示，该字符串与执行环境的地区对应。
-- toString()：返回对象的字符串表示。
-- valueOf()：返回对象的字符串、数值或布尔值表示。通常与 toString()方法的返回值
-  相同。 -->
+:::snippet Object 类型
+
+1. `constructor`：保存着用于创建当前对象的函数。对于前面的例子而言，构造函数（`constructor`）
+   就是 `Object()`。
+2. `hasOwnProperty(propertyName)`：用于检查给定的属性在当前对象实例中（而不是在实例
+   的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例
+   如：o.hasOwnProperty("name")）。
+3. `isPrototypeOf(object)`：用于检查传入的对象是否是传入对象的原型。
+4. `propertyIsEnumerable(propertyName)`：用于检查给定的属性是否能够使用 for-in 语句
+   （本章后面将会讨论）来枚举。与 hasOwnProperty()方法一样，作为参数的属性名必须以字符
+   串形式指定。
+5. `toLocaleString()`：返回对象的字符串表示，该字符串与执行环境的地区对应。
+6. `toString()`：返回对象的字符串表示。
+7. `valueOf()`：返回对象的字符串、数值或布尔值表示。通常与 toString()方法的返回值相同。
+
+:::
