--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -377,9 +377,7 @@ alert(String(undefined)); // "undefined"
    的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例
    如：o.hasOwnProperty("name")）。
 3. `isPrototypeOf(object)`：用于检查传入的对象是否是传入对象的原型。
-4. `propertyIsEnumerable(propertyName)`：用于检查给定的属性是否能够使用 for-in 语句
-   （本章后面将会讨论）来枚举。与 hasOwnProperty()方法一样，作为参数的属性名必须以字符
-   串形式指定。
+4. `propertyIsEnumerable(propertyName)`：用于检查给定的属性是否能够使用 for-in 语句来枚举。与 hasOwnProperty()方法一样，作为参数的属性名必须以字符串形式指定。
 5. `toLocaleString()`：返回对象的字符串表示，该字符串与执行环境的地区对应。
 6. `toString()`：返回对象的字符串表示。
 7. `valueOf()`：返回对象的字符串、数值或布尔值表示。通常与 toString()方法的返回值相同。
