--- a/src/notes/javascript/07.md
+++ b/src/notes/javascript/07.md
@@ -201,7 +201,7 @@ alert(removed); // yellow，返回的数组中只包含一项
 
 :::snippet Array 位置方法
 
-1. indexOf 方法
+1. `indexOf` 方法
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -209,7 +209,7 @@ alert(numbers.indexOf(4)); //3
 alert(numbers.indexOf(4, 4)); //5  参数：搜索值，开始索引
 ```
 
-2. lastIndexOf 方法
+2. `lastIndexOf` 方法
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -217,7 +217,7 @@ alert(numbers.lastIndexOf(4)); //5
 alert(numbers.lastIndexOf(4, 4)); //3 参数：搜索值，开始索引
 ```
 
-> 使用 indexOf()和 lastIndexOf()方法查找特定项在数组中的位置非常简单，支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+> 支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
 
 :::
 
@@ -271,7 +271,7 @@ var mapResult = numbers.map(function(item, index, array){
 alert(mapResult); //[2,4,6,8,10,8,6,4,2]
 ```
 
-> 使用 indexOf()和 lastIndexOf()方法查找特定项在数组中的位置非常简单，支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+> 支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
 
 :::
 
@@ -297,6 +297,6 @@ var sum = values.reduceRight(function(prev, cur, index, array){
 alert(sum); //15=>5+4+3+2+1
 ```
 
-> 使用 indexOf()和 lastIndexOf()方法查找特定项在数组中的位置非常简单，支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+> 支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
 
 :::
