--- a/src/notes/javascript/07.md
+++ b/src/notes/javascript/07.md
@@ -39,7 +39,7 @@ if (Array.isArray(value)){
 
 :::snippet Array 转换方法
 
-1. Array 重新了 toLocaleString()、toString()和 valueOf()方法
+1. Array 重新了定义`toLocaleString()`、`toString()`和`valueOf()`方法
 
 ```JavaScript
 var colors = ["red", "blue", "green"]; // 创建一个包含3 个字符串的数组
@@ -115,7 +115,7 @@ alert(colors.length); //2
 
 :::snippet Array 排序方法
 
-1. reverse 数据反转
+1. 数据反转
 
 ```JavaScript
 var values = [1, 2, 3, 4, 5];
@@ -148,14 +148,14 @@ values.sort(compare);
 alert(values); // 15,10,5,1,0
 ```
 
-3. 在默认情况下，sort()方法按升序排列数组项——即最小的值位于最前面，最大的值排在最后面。
-4. 为了实现排序，sort()方法会调用每个数组项的 toString()转型方法，然后比较得到的字符串，以确定如何排序
+3. 在默认情况下，`sort()`方法按升序排列数组项——即最小的值位于最前面，最大的值排在最后面。
+4. 为了实现排序，`sort()`方法会调用每个数组项的`toString()`转型方法，然后比较得到的字符串，以确定如何排序
 
 :::
 
 :::snippet Array 操作方法
 
-1. concat 方法
+1. `concat()` 方法
 
 ```JavaScript
 var colors = ["red", "green", "blue"];
@@ -164,7 +164,7 @@ alert(colors); //red,green,blue
 alert(colors2); //red,green,blue,yellow,black,brown
 ```
 
-2. slice 方法
+2. `slice()` 方法
 
 ```JavaScript
 var colors = ["red", "green", "blue", "yellow", "purple"];
@@ -174,7 +174,7 @@ alert(colors2); //green,blue,yellow,purple
 alert(colors3); //green,blue,yellow
 ```
 
-3. splice 方法
+3. `splice()` 方法
 
 | 参数              | 描述                                                                  |
 | :---------------- | :-------------------------------------------------------------------- |
@@ -201,7 +201,7 @@ alert(removed); // yellow，返回的数组中只包含一项
 
 :::snippet Array 位置方法
 
-1. `indexOf` 方法
+1. `indexOf()` 方法
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -209,7 +209,7 @@ alert(numbers.indexOf(4)); //3
 alert(numbers.indexOf(4, 4)); //5  参数：搜索值，开始索引
 ```
 
-2. `lastIndexOf` 方法
+2. `lastIndexOf()` 方法
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -217,13 +217,13 @@ alert(numbers.lastIndexOf(4)); //5
 alert(numbers.lastIndexOf(4, 4)); //3 参数：搜索值，开始索引
 ```
 
-> 支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+> 支持 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
 
 :::
 
 :::snippet Array 迭代方法
 
-1. every()：对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
+1. `every()`：对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -233,7 +233,7 @@ var everyResult = numbers.every(function(item, index, array){
 alert(everyResult); //false
 ```
 
-2. some()：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回 true。
+2. `some()`：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回 true。
 
 ```JavaScript
 var someResult = numbers.some(function(item, index, array){
@@ -242,7 +242,7 @@ var someResult = numbers.some(function(item, index, array){
 alert(someResult); //true
 ```
 
-3. filter()：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
+3. `filter()`：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -252,7 +252,7 @@ return (item > 2);
 alert(filterResult); //[3,4,5,4,3]
 ```
 
-4. forEach()：对数组中的每一项运行给定函数。这个方法没有返回值。
+4. `forEach()`：对数组中的每一项运行给定函数。这个方法没有返回值。
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -261,7 +261,7 @@ var numbers = [1,2,3,4,5,4,3,2,1];
 });
 ```
 
-5. map()：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
+5. `map()`：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
 
 ```JavaScript
 var numbers = [1,2,3,4,5,4,3,2,1];
@@ -271,13 +271,13 @@ var mapResult = numbers.map(function(item, index, array){
 alert(mapResult); //[2,4,6,8,10,8,6,4,2]
 ```
 
-> 支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+> 支持 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
 
 :::
 
 :::snippet Array 归并方法
 
-1. reduce 方法
+1. `reduce()` 方法
 
 ```JavaScript
 var values = [1,2,3,4,5];
@@ -287,7 +287,7 @@ var sum = values.reduce(function(prev, cur, index, array){
 alert(sum); //15=>1+2+3+4+5
 ```
 
-2. reduceRight 方法
+2. `reduceRight()` 方法
 
 ```JavaScript
 var values = [1,2,3,4,5];
@@ -297,6 +297,190 @@ var sum = values.reduceRight(function(prev, cur, index, array){
 alert(sum); //15=>5+4+3+2+1
 ```
 
-> 支持它们的浏览器包,括 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+> 支持 IE9+、Firefox 2+、Safari 3+、Opera 9.5+和 Chrome。
+
+:::
+
+:::snippet Fuction 定义
+
+1. 全局定义
+
+```JavaScript
+function sum (num1, num2) {
+return num1 + num2;
+}
+```
+
+2. 变量定义
+
+```JavaScript
+var sum = function(num1, num2){
+return num1 + num2;
+};
+```
+
+3. 构造函数定义
+
+```JavaScript
+var sum = new Function("num1", "num2", "return num1 + num2"); // 不推荐
+//第一次是解析常规ECMAScript 代码，第二次是解析传入构造函数中的字符串，从而影响性能
+```
+
+> 函数定义后，不管何种方式定义，最终基本都是指向一个内存地址，变量名称只是一个指针
+
+:::
+
+:::snippet Fuction 没有重载（深入理解）
+
+```JavaScript
+var addSomeNumber = function (num){
+    return num + 100;
+};
+addSomeNumber = function (num) {
+    return num + 200;
+};
+var result = addSomeNumber(100); //300
+```
+
+> 由于函数名，实际是函数的指针对象，指向内存地址，所以函数更改，就改变了内存指向，会调用别的方法，所以不存在重载
+
+:::
+
+:::snippet Fuction 声明与表达式
+
+1. 函数声明：解析器会预解析先读取函数声明，在执行前可以访问（函数声明提升）
+
+```JavaScript
+alert(sum(10,10));//20
+function sum(num1, num2){
+    return num1 + num2;
+}
+```
+
+2. 函数表达式：解析器会预解析变量定义，但不解析变量值（变量名提升），等到解析所有代码才会详细解析
+
+```JavaScript
+alert(sum(10,10));//报错，sum的值为undefined
+    var sum = function(num1, num2){
+    return num1 + num2;
+};
+```
+
+:::
+
+:::snippet Fuction 作为值
+
+函数也可以作为参数和值传递
+
+```JavaScript
+function callSomeFunction(someFunction, someArgument){
+    return someFunction(someArgument);
+}
+```
+
+:::
+
+:::snippet Fuction 函数内部属性
+
+1. `callee`属性：当前函数
+
+```JavaScript
+function factorial(num){
+    if (num <=1) {
+        return 1;
+    } else {
+        return num * arguments.callee(num-1)//相当于factorial
+    }
+}
+```
+
+2. `caller`属性：当前函数被调用的函数对象
+
+```JavaScript
+function outer(){
+    inner();
+}
+function inner(){
+    alert(arguments.callee.caller);//相当于outer
+}
+outer();
+```
+
+3. 标准模式都不支持`callee`,`caller`属性
+
+:::
+
+:::snippet Fuction 函数内部属性
+
+1. `arguments`函数的参数属性
+2. `this`：回想函数当前调用的对象
+
+:::
+
+:::snippet Fuction 函数属性和方法
+
+1. `length`属性：表示函数可以接收多少个参数
+
+```JavaScript
+function sayName(name){
+    alert(name);
+}
+
+function sum(num1, num2){
+    return num1 + num2;
+}
+
+function sayHi(){
+    alert("hi");
+}
+
+alert(sayName.length); //1
+alert(sum.length); //2
+alert(sayHi.length); //0
+```
+
+2. `prototype`属性：保存函数所有实例方法的真正所在，prototype 属性是不可枚举的，因此使用 for-in 无法发现
+
+3. `call()`方法：改变 this 指向调用函数`fun.call(this指向对象,param1,param2,...)`
+
+```JavaScript
+function sum(num1, num2){
+    return num1 + num2;
+}
+function callSum(num1, num2){
+    return sum.call(this, num1, num2);
+}
+alert(callSum(10,10)); //20
+```
+
+4. `apply()`方法：改变 this 指向调用函数`fun.call(this指向对象,[param1,param2,...])`
+
+```JavaScript
+function sum(num1, num2){
+    return num1 + num2;
+}
+function callSum1(num1, num2){
+    return sum.apply(this, arguments); // 传入arguments 对象
+}
+function callSum2(num1, num2){
+    return sum.apply(this, [num1, num2]); // 传入数组
+}
+alert(callSum1(10,10)); //20
+alert(callSum2(10,10)); //20
+```
+
+5. `bind()`方法：改变 this 指向调用函数`fun.bind(this指向对象,param1,param2,...)(剩余原来函数未指定的参数)`
+
+```JavaScript
+window.color = "red";
+var o = { color: "blue" };
+function sayColor(msg){
+    alert(this.color+msg);
+}
+var objectSayColor = sayColor.bind(o,'蓝色');
+objectSayColor(); //blue蓝色
+```
+
+> 支持 IE9+、Firefox 4+、Safari 5+、Opera 10.5+和 Chrome
 
 :::
