--- a/src/notes/javascript/03.md
+++ b/src/notes/javascript/03.md
@@ -84,15 +84,25 @@ num = -num; // 变成了-25
 
 1. 底层使用 32 位二进制进行计算
 2. 进制转换计算
-   - 18
-   - =>转化为二进制 32 位：00000000000000000000000000010010
-   - =>简化写法：10010
-   - =>计算规则：2<sup>4</sup>*1+2<sup>3</sup>*0+2<sup>2</sup>*0+2<sup>1</sup>*1+2<sup>0</sup>\*0=18
+
+   (1) 18
+
+   (2) => 转化为二进制 32 位：00000000000000000000000000010010
+
+   (3) => 简化写法：10010
+
+   (4) => 计算规则：2<sup>4</sup>*1+2<sup>3</sup>*0+2<sup>2</sup>*0+2<sup>1</sup>*1+2<sup>0</sup>\*0=18
+
 3. 负数进制转换计算
-   - 18
-   - =>转化为二进制 32 位：0000 0000 0000 0000 0000 0000 0001 0010
-   - =>二进制取反：1111 1111 1111 1111 1111 1111 1110 1101
-   - =>二进制反码加 1：1111 1111 1111 1111 1111 1111 1110 1110
+
+   (1) 18
+
+   (2) => 转化为二进制 32 位：0000 0000 0000 0000 0000 0000 0001 0010
+
+   (3) => 二进制取反：1111 1111 1111 1111 1111 1111 1110 1101
+
+   (4) => 二进制反码加 1：1111 1111 1111 1111 1111 1111 1110 1110
+
 4. 二进制的转换输出
 
 ```JavaScript
