--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -349,8 +349,8 @@ var age = 11;
 var ageAsString = age.toString(); // 字符串"11"
 var found = true;
 var foundAsString = found.toString(); // 字符串"true"
-null.tosString() //报错
-undefined.tosString() //报错
+null.toString() //报错
+undefined.toString() //报错
 
 //进制转换
 var num = 10;
