--- a/src/notes/javascript/01.md
+++ b/src/notes/javascript/01.md
@@ -1,6 +1,6 @@
 :::snippet JavaScript 历史
 
-1. 1995 年，Netscape 开发了 JavaScript，主要用于浏览器的交互
+1. 1995 年，Netscape 开发了 `JavaScript`，主要用于浏览器的交互
 2. Netscape 将 JavaScript 1.1 为蓝本的建议被提交给了欧洲计算机制造商协会（ECMA）制定了 JavaScript 的开发标准`ECMAScript`
 3. `ECMAScript`从`ECMAScript1`发展到`ECMAScript5`基本目前浏览器都兼容`ECMAScript5`的规范也就是`ES5`
 4. 2015 年发布了`ECMAScript 6`，部分浏览器可能还未支持，但是可以使用编译器编译成`ECMAScript 5`的代码
@@ -49,7 +49,7 @@
 3. 引用外部文件优点
    - 可维护性：无需触及 Html 页面直接对应的 js 文件即可更改代码
    - 可缓存：相同的 js 文件会被浏览器缓存页面使用相同的文件，最终结果就是能够加快页面加载的速度
-   - 适应未来：通过外部文件来包含 JavaScript 无须使用前面提到 XHTML 或注释 hack。HTML 和 XHTML 包含外部文件的语法是相同的
+   - 适应未来：通过外部文件来包含 JavaScript 无须使用 XHTML 或注释 hack。HTML 和 XHTML 包含外部文件的语法是相同的
 
 :::
 
