--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -24,7 +24,7 @@
 "use strict";
 ```
 
-5. 语句：ECMAScript 中的语句以一个分号结尾；如果省略分号，则由解析器确定语句的结尾，建议语句结尾都加上分号防止压缩文件等各种不确定的情况会会报错
+5. 语句：ECMAScript 中的语句以一个分号结尾`;`如果省略分号，则由解析器确定语句的结尾，建议语句结尾都加上分号防止压缩文件等各种不确定的情况会会报错
 
 ```javascript
 var sum = a + b; // 即使没有分号也是有效的语句——不推荐
@@ -141,7 +141,7 @@ alert(typeof age); // "undefined"
 :::snippet Null 类型
 
 1. Null 类型的值只有`null`，typeof 检测返回 object 类型
-2. undefined 值是派生自 null 值的，因此 ECMA 规定对它们的相等性测试要返回 true
+2. `undefined` 值是派生自 `null` 值的，因此 ECMA 规定对它们的相等性测试要返回 true
 
 ```JavaScript
 alert(null == undefined); //true
@@ -159,7 +159,7 @@ var params = null;
 
 :::snippet Boolean 类型
 
-1. Boolean 类型只有两个字面值：true 和 false
+1. Boolean 类型只有两个字面值：`true` 和 `false`
 
 2. 将一个值转换为其对应的 Boolean 值，可以调用转型函数 Boolean()
 
@@ -227,16 +227,17 @@ var floatNum = 3.125e7; // e的科学计数法表示等于31250000
    - 最小值：`Number.MIN_VALUE`==5e-324
    - 负无穷大：小于最小值，`-Infinity`==`Number.POSITIVE_INFINITY`
    - 正无穷大：大于最大值，`Infinity`==`Number.NEGATIVE_INFINITY`
-   - 范围判断
+   - 范围判断:`isFinite()`函数用于检查其参数是否是无穷大，可计算的数值返回`true`
 
 ```JavaScript
+// 如果 number 是 NaN（非数字），或者是正、负无穷大的数，则返回 false
 var result = Number.MAX_VALUE + Number.MAX_VALUE;
 alert(isFinite(result)); //false
 ```
 
 6. NaN
 
-NaN，即非数值（Not a Number）是一个特殊的数值，这个数值用于表示一个本来要返回数值的操作数
+`NaN`即非数值（Not a Number）是一个特殊的数值，这个数值用于表示一个本来要返回数值的操作数
 未返回数值的情况（这样就不会抛出错误了）,计算`数值/0`不会报错
 
 ```JavaScript
@@ -250,7 +251,9 @@ alert(isNaN(true)); //false（可以被转换成数值1）
 ```
 
 只有 0 除以 0 才会返回 NaN，正数除以 0 返回 Infinity，负数除以 0 返回-Infinity。
-isNaN()也适用于对象，先调用对象 valueOf 不能转为数值，在调用 toString()方法
+`isNaN()`也适用于对象，先调用对象 `valueOf` 不能转为数值，在调用 `toString()`方法
+
+> NaN 不等于 NaN ，也不等于任何数值
 
 7. 数值类型转换
 
@@ -280,6 +283,8 @@ Number("");//0
 Number("hello");//NaN
 ```
 
+> Number(null)等于 0，Number(undefined，返回 NaN。)等于 NaN
+
 `parseInt()`方法
 
 ```JavaScript
@@ -290,11 +295,7 @@ parseInt(22.5); // 22
 parseInt("070"); // 56（八进制数）
 parseInt("70"); // 70（十进制数）
 parseInt("0xf"); // 15（十六进制数）
-```
 
-`parseFloat()`方法
-
-```JavaScript
 //第二个参数为进制参数
 parseInt("AF", 16); //175
 parseInt("AF"); //NaN
@@ -302,7 +303,11 @@ parseInt("10", 2); //2 （按二进制解析）
 parseInt("10", 8); //8 （按八进制解析）
 parseInt("10", 10); //10 （按十进制解析）
 parseInt("10", 16); //16 （按十六进制解析）
+```
 
+`parseFloat()`方法
+
+```JavaScript
 parseFloat("1234blue"); //1234 （整数）
 parseFloat("0xA"); //0
 parseFloat("22.5"); //22.5
@@ -337,7 +342,7 @@ parseFloat("3.125e7"); //31250000
 var lang = "Java";
 lang = lang + "Script";
 //第一行代码创建字符串
-//第二行代码创建长度为十位的新的字符串，再讲Java和Script填充进去，销毁原有字符串
+//第二行代码创建长度为十位的新的字符串，再将Java和Script填充进去，销毁原有字符串
 //某些旧版本的浏览器（例如版本低于1.0 的Firefox、IE6 等）中拼接字符串时速度很慢的原因所在。
 //但这些浏览器后来的版本已经解决了这个低效率问题
 ```
@@ -371,15 +376,12 @@ alert(String(undefined)); // "undefined"
 
 :::snippet Object 类型
 
-1. `constructor`：保存着用于创建当前对象的函数。对于前面的例子而言，构造函数（`constructor`）
-   就是 `Object()`。
-2. `hasOwnProperty(propertyName)`：用于检查给定的属性在当前对象实例中（而不是在实例
-   的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例
-   如：o.hasOwnProperty("name")）。
+1. `constructor`：保存着用于创建当前对象的函数。对于前面的例子而言，构造函数（`constructor`）就是 `Object()`。
+2. `hasOwnProperty(propertyName)`：用于检查给定的属性在当前对象实例中（而不是在实例的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例如：o.hasOwnProperty("name")）。
 3. `isPrototypeOf(object)`：用于检查传入的对象是否是传入对象的原型。
 4. `propertyIsEnumerable(propertyName)`：用于检查给定的属性是否能够使用 for-in 语句来枚举。与 hasOwnProperty()方法一样，作为参数的属性名必须以字符串形式指定。
 5. `toLocaleString()`：返回对象的字符串表示，该字符串与执行环境的地区对应。
 6. `toString()`：返回对象的字符串表示。
-7. `valueOf()`：返回对象的字符串、数值或布尔值表示。通常与 toString()方法的返回值相同。
+7. `valueOf()`：返回对象的字符串、数值或布尔值表示。通常与 `toString()`方法的返回值相同。
 
 :::
