--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -553,7 +553,7 @@ var application = (function() {
 
 :::
 
-:::snippet 闭包有权访问
+:::snippet 闭包特权访问
 
 1. 在后台执行环境中，闭包的作用域链包含着它自己的作用域、包含函数的作用域和全局作用域。
 2. 函数的作用域及其所有变量都会在函数执行结束后被销毁，当函数返回了一个闭包时，这个函数的作用域将会一直在内存中保存到闭包不存在为止。
